update content and data

--- a/data/cities/fort-gibson/a-flower-can.yml
+++ b/data/cities/fort-gibson/a-flower-can.yml
@@ -7,5 +7,5 @@ city: Fort Gibson
 street: "910 S Lee St"
 housenumber: 
 phone: "918-478-9888"
-opening_hours: "Mo-Fr 07:00-18:00, Sa: 9:00 - 14:00"
+opening_hours: "Mo-Fr 07:00-18:00, Sa 09:00-14:00"
 website: "https://www.aflowercanflorist.com"
