--- a/data/cities/stillwater/sprint.yml
+++ b/data/cities/stillwater/sprint.yml
@@ -1,11 +1,11 @@
-id: 270512244
+id: 370969570
 type: way
-latitude: 36.14424
-longitude: -97.05373
-postcode: "74075"
+latitude: 36.1163
+longitude: -97.05089
+postcode: "74074"
 city: Stillwater
-street: "North Perkins Road"
-housenumber: 2204
+street: "East 6th Avenue"
+housenumber: 517
 phone: ""
 opening_hours: ""
 website: ""
