--- a/data/cities/tulsa/middle-east-market.yml
+++ b/data/cities/tulsa/middle-east-market.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "South Mingo Road"
 housenumber: 5459
 phone: "+1 918 665 0979"
-opening_hours: "Mon-Sun: 10:00-20:00"
+opening_hours: "Mo-Su 10:00-20:00"
 website: "https://middleeastmarket-tulsa.com"
