--- a/data/cities/grove/oreilly-auto-parts.yml
+++ b/data/cities/grove/oreilly-auto-parts.yml
@@ -7,5 +7,5 @@ city: Grove
 street: "South Main Street"
 housenumber: 620
 phone: "+19187869025"
-opening_hours: "Mo-Sa 07:30-21:00 Su 09:00-20:00"
+opening_hours: "Mo-Sa 07:30-21:00; Su 09:00-20:00"
 website: "locations.oreilly.com"
