--- a/data/cities/tahlequah/cox-storage.yml
+++ b/data/cities/tahlequah/cox-storage.yml
@@ -7,5 +7,5 @@ city: Tahlequah
 street: "1606 S Muskogee Ave"
 housenumber: 
 phone: "918-207-1600"
-opening_hours: "Monday-Friday: 9:00AM to 5:00PM,Saturday: 9:00AM to 12:00PM"
+opening_hours: "Mo-Fr 09:00-17:00, Sa 09:00-12:00"
 website: "https://coxstorage.com"
