update content and data

--- a/data/cities/oklahoma-city/braums.yml
+++ b/data/cities/oklahoma-city/braums.yml
@@ -1,11 +1,11 @@
-id: 244646802
+id: 238019833
 type: way
-latitude: 35.53431
-longitude: -97.56532
+latitude: 35.60957
+longitude: -97.5331
 postcode: ""
 city: Oklahoma City
-street: ""
-housenumber: 
+street: "West Memorial Road"
+housenumber: 1129
 phone: ""
 opening_hours: ""
 website: ""
