--- a/data/cities/edmond/glo-tanning.yml
+++ b/data/cities/edmond/glo-tanning.yml
@@ -1,11 +1,11 @@
-id: 1157466872
+id: 309851006
 type: way
-latitude: 35.62494
-longitude: -97.48712
-postcode: "73013"
+latitude: 35.65089
+longitude: -97.46568
+postcode: "73034"
 city: Edmond
-street: "South Broadway"
-housenumber: 3209
+street: "South Blackwelder Avenue"
+housenumber: 335
 phone: "+1 405 708 6320"
-opening_hours: "Mo-Fr 09:00-21:00; Sa,Su 10:00-18:00"
-website: ""
+opening_hours: ""
+website: "https://www.glotanning.com/location/edmond-uco"
