--- a/data/cities/oklahoma-city/walmart-supercenter.yml
+++ b/data/cities/oklahoma-city/walmart-supercenter.yml
@@ -1,11 +1,11 @@
-id: 238022245
+id: 181551093
 type: way
-latitude: 35.60591
-longitude: -97.54639
-postcode: "73134"
+latitude: 35.52575
+longitude: -97.54059
+postcode: "73118"
 city: Oklahoma City
-street: "West Memorial Road"
-housenumber: 2000
-phone: "+1 405 752 1900"
+street: "Belle Isle Boulevard"
+housenumber: 1801
+phone: "+1 405 841 6502"
 opening_hours: "Mo-Su 06:00-23:00"
-website: "https://www.walmart.com/store/1626/oklahoma-city-ok/whats-new"
+website: "https://www.walmart.com/store/2804/oklahoma-city-ok/whats-new"
