--- a/data/cities/durant/orschelin-farm-and-home.yml
+++ b/data/cities/durant/orschelin-farm-and-home.yml
@@ -7,5 +7,5 @@ city: Durant
 street: "West Main Street"
 housenumber: 2424
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 07:30-20:00; Su 09:00-18:00"
 website: ""
