--- a/data/cities/stillwater/oncue-north-perkins-road.yml
+++ b/data/cities/stillwater/oncue-north-perkins-road.yml
@@ -1,11 +1,11 @@
-id: 236346557
+id: 237051366
 type: way
-latitude: 36.12814
-longitude: -97.05201
+latitude: 36.13025
+longitude: -97.05204
 postcode: "74075"
 city: Stillwater
 street: "North Perkins Road"
-housenumber: 504
-phone: "+1-405-372-2076"
+housenumber: 724
+phone: ""
 opening_hours: ""
 website: ""
