update content and data

--- a/data/cities/tulsa/b-and-s-muffler-and-brakes.yml
+++ b/data/cities/tulsa/b-and-s-muffler-and-brakes.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "East Admiral Place"
 housenumber: 4866
 phone: "+1-918-836-4809"
-opening_hours: ""
+opening_hours: "Mo-Fr 07:30-17:00; PH off"
 website: "http://bsmuffler.com"
