--- a/data/cities/tulsa/ziegler-art-and-frame.yml
+++ b/data/cities/tulsa/ziegler-art-and-frame.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "North Lewis Avenue"
 housenumber: 6
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 09:00-17:30; Sa 09:00-16:00"
 website: ""
