update content and data

--- a/data/cities/coweta/country-mart.yml
+++ b/data/cities/coweta/country-mart.yml
@@ -1,11 +1,11 @@
 id: 951705239
 type: way
-latitude: 35.96103
-longitude: -95.65212
+latitude: 35.96102
+longitude: -95.65209
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
-housenumber: 
+housenumber: 13937
 phone: ""
 opening_hours: ""
 website: ""
