--- a/data/cities/glenpool/braums.yml
+++ b/data/cities/glenpool/braums.yml
@@ -6,6 +6,6 @@ postcode: "74033"
 city: Glenpool
 street: "South Broadway Street"
 housenumber: 15050
-phone: ""
+phone: "+1-918-938-0662"
 opening_hours: ""
 website: ""
