--- a/data/cities/muskogee/t-mobile.yml
+++ b/data/cities/muskogee/t-mobile.yml
@@ -1,11 +1,11 @@
-id: 10178822940
-type: node
-latitude: 35.77148
-longitude: -95.36998
+id: 1173386726
+type: way
+latitude: 35.76917
+longitude: -95.37128
 postcode: "74401"
 city: Muskogee
 street: "West Shawnee Street"
-housenumber: 930
+housenumber: 591
 phone: ""
 opening_hours: ""
 website: ""
