update content and data

--- a/data/cities/coweta/koweta-hardware-and-lumber.yml
+++ b/data/cities/coweta/koweta-hardware-and-lumber.yml
@@ -2,7 +2,7 @@ id: 1012641660
 type: way
 latitude: 35.95086
 longitude: -95.65037
-postcode: ""
+postcode: "74429"
 city: Coweta
 street: "South Broadway Street"
 housenumber: 103
