--- a/data/cities/tulsa/jakes-beyond-bud.yml
+++ b/data/cities/tulsa/jakes-beyond-bud.yml
@@ -1,11 +1,11 @@
-id: 6723456154
-type: node
-latitude: 36.14687
-longitude: -96.0663
+id: 1181232916
+type: way
+latitude: 36.14703
+longitude: -96.06592
 postcode: "74127"
 city: Tulsa
 street: "East Charles Page Boulevard"
 housenumber: 6524
-phone: "918-514-4208"
+phone: "+1-918-514-4208"
 opening_hours: "Mo-Sa 10:00-18:00"
 website: "https://www.jakesbeyondbud.com/"
