update content and data

--- a/data/cities/oklahoma-city/happy-cloud-time.yml
+++ b/data/cities/oklahoma-city/happy-cloud-time.yml
@@ -6,6 +6,6 @@ postcode: "73107"
 city: Oklahoma City
 street: "Northwest 23rd Street"
 housenumber: 2131
-phone: "+1 256 585 7546"
-opening_hours: "Mo-Sa 09:00-21:00; Su 10:00-21:00"
-website: "http://happycloudsmokeshop.com"
+phone: "+1 405 900 5570"
+opening_hours: "Mo-Sa 10:00-21:00"
+website: "https://happycloudsmokeshop.com"
