--- a/data/cities/tulsa/car-city-auto-finance.yml
+++ b/data/cities/tulsa/car-city-auto-finance.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "South Yale Avenue"
 housenumber: 3252
 phone: "+1 918 895 8778"
-opening_hours: ""
+opening_hours: "Mo-Fr 08:00-19:00"
 website: "http://www.carcityautofinance.com/"
