update content and data

--- a/data/cities/norman/robinsons-repurposed.yml
+++ b/data/cities/norman/robinsons-repurposed.yml
@@ -1,7 +1,7 @@
-id: 4551857904
-type: node
-latitude: 35.22282
-longitude: -97.43968
+id: 456769790
+type: way
+latitude: 35.2227
+longitude: -97.43956
 postcode: "73069"
 city: Norman
 street: "East Main Street"
