update content and data

--- a/data/cities/tulsa/apertures-photo.yml
+++ b/data/cities/tulsa/apertures-photo.yml
@@ -1,7 +1,7 @@
-id: 10966441101
-type: node
-latitude: 36.11765
-longitude: -95.92162
+id: 1187724227
+type: way
+latitude: 36.11766
+longitude: -95.9215
 postcode: ""
 city: Tulsa
 street: "South Yale Avenue"
