--- a/data/cities/tulsa/catholic-book-and-gift-store.yml
+++ b/data/cities/tulsa/catholic-book-and-gift-store.yml
@@ -1,7 +1,7 @@
-id: 10966441102
-type: node
-latitude: 36.11755
-longitude: -95.92198
+id: 1146054877
+type: way
+latitude: 36.11749
+longitude: -95.92179
 postcode: ""
 city: Tulsa
 street: "South Yale Avenue"
