--- a/data/cities/chickasha/aldi.yml
+++ b/data/cities/chickasha/aldi.yml
@@ -1,11 +1,11 @@
-id: 8627311527
-type: node
-latitude: 35.02662
-longitude: -97.93642
+id: 930446787
+type: way
+latitude: 35.02643
+longitude: -97.93632
 postcode: "73018"
 city: Chickasha
 street: "South 4th Street"
 housenumber: 2318
-phone: "+1 888 475 1126"
+phone: ""
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: ""
