--- a/data/cities/broken-arrow/desserts-by-dbk-kousee.yml
+++ b/data/cities/broken-arrow/desserts-by-dbk-kousee.yml
@@ -1,7 +1,7 @@
-id: 10833065485
-type: node
-latitude: 36.0624
-longitude: -95.79664
+id: 1188501508
+type: way
+latitude: 36.06254
+longitude: -95.7967
 postcode: "74012"
 city: Broken Arrow
 street: ""
