--- a/data/cities/broken-arrow/print-n-copy.yml
+++ b/data/cities/broken-arrow/print-n-copy.yml
@@ -1,7 +1,7 @@
-id: 10833065492
-type: node
-latitude: 36.06187
-longitude: -95.79648
+id: 1188501500
+type: way
+latitude: 36.06172
+longitude: -95.79632
 postcode: "74012"
 city: Broken Arrow
 street: "North Elm Place"
