--- a/data/cities/broken-arrow/sky-nails.yml
+++ b/data/cities/broken-arrow/sky-nails.yml
@@ -1,7 +1,7 @@
-id: 10833065491
-type: node
-latitude: 36.06195
-longitude: -95.79648
+id: 1188501499
+type: way
+latitude: 36.0619
+longitude: -95.79632
 postcode: "74012"
 city: Broken Arrow
 street: "North Elm Place"
