--- a/data/cities/muskogee/homeland.yml
+++ b/data/cities/muskogee/homeland.yml
@@ -1,11 +1,11 @@
-id: 1171583758
+id: 1171450084
 type: way
-latitude: 35.72821
-longitude: -95.33956
+latitude: 35.74219
+longitude: -95.33957
 postcode: "74403"
 city: Muskogee
-street: "South York Street"
-housenumber: 1300
-phone: ""
+street: "Chandler Road"
+housenumber: 2410
+phone: "+1-918-686-6730"
 opening_hours: ""
 website: ""
