--- a/data/cities/tulsa/classy-nails.yml
+++ b/data/cities/tulsa/classy-nails.yml
@@ -1,7 +1,7 @@
-id: 4783108809
-type: node
-latitude: 36.15584
-longitude: -95.98864
+id: 1188564306
+type: way
+latitude: 36.15591
+longitude: -95.98875
 postcode: ""
 city: Tulsa
 street: "South Detroit Avenue"
