--- a/data/cities/tulsa/jiffy-lube.yml
+++ b/data/cities/tulsa/jiffy-lube.yml
@@ -1,11 +1,11 @@
-id: 191525379
+id: 189001642
 type: way
-latitude: 36.09153
-longitude: -95.93979
-postcode: "74135"
+latitude: 36.05971
+longitude: -95.88693
+postcode: "74133"
 city: Tulsa
-street: "East Skelly Drive"
-housenumber: 3301
-phone: ""
+street: "South Memorial Drive"
+housenumber: 7122
+phone: "+1-918-250-9260"
 opening_hours: ""
-website: ""
+website: "https://www.jiffylube.com/"
