--- a/data/cities/tulsa/sanchez-tires.yml
+++ b/data/cities/tulsa/sanchez-tires.yml
@@ -6,6 +6,6 @@ postcode: "74135"
 city: Tulsa
 street: "South Yale Avenue"
 housenumber: 3252
-phone: "+1 918 895 8778"
+phone: ""
 opening_hours: "Mo-Fr 08:00-19:00"
-website: "http://www.carcityautofinance.com/"
+website: ""
