update content and data

--- a/data/cities/tulsa/the-home-depot.yml
+++ b/data/cities/tulsa/the-home-depot.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "South Elgin Avenue"
 housenumber: 901
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
 website: ""
