update content and data

--- a/data/cities/tulsa/t-town-appliance-east-31st-street.yml
+++ b/data/cities/tulsa/t-town-appliance-east-31st-street.yml
@@ -1,11 +1,11 @@
-id: 1171901638
+id: 1171901639
 type: way
 latitude: 36.11835
-longitude: -95.92448
+longitude: -95.92454
 postcode: ""
 city: Tulsa
 street: "East 31st Street"
-housenumber: 
+housenumber: 4622
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.ttownappliance.com/"
