--- a/data/cities/tulsa/mama-lecha.yml
+++ b/data/cities/tulsa/mama-lecha.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "South Memorial Drive"
 housenumber: 3025
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 07:00-22:30"
 website: ""
