update content and data

--- a/data/cities/coweta/coweta-sports-center.yml
+++ b/data/cities/coweta/coweta-sports-center.yml
@@ -1,7 +1,7 @@
-id: 9529902751
-type: node
-latitude: 35.96328
-longitude: -95.65161
+id: 1192081331
+type: way
+latitude: 35.96335
+longitude: -95.65167
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
