--- a/data/cities/coweta/dollar-general.yml
+++ b/data/cities/coweta/dollar-general.yml
@@ -5,7 +5,7 @@ longitude: -95.6551
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
-housenumber: 
+housenumber: 13695
 phone: ""
 opening_hours: ""
 website: ""
