--- a/data/cities/coweta/smokin-apes-head-shop.yml
+++ b/data/cities/coweta/smokin-apes-head-shop.yml
@@ -6,6 +6,6 @@ postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
 housenumber: 
-phone: ""
-opening_hours: ""
+phone: "+1 918 279 1150"
+opening_hours: "Mo-Su 10:00-22:00"
 website: ""
