--- a/data/cities/oklahoma-city/braums-west-memorial-road.yml
+++ b/data/cities/oklahoma-city/braums-west-memorial-road.yml
@@ -1,11 +1,11 @@
-id: 238022252
+id: 238019833
 type: way
-latitude: 35.60722
-longitude: -97.55569
-postcode: "73134"
+latitude: 35.60957
+longitude: -97.5331
+postcode: ""
 city: Oklahoma City
 street: "West Memorial Road"
-housenumber: 2400
+housenumber: 1129
 phone: ""
 opening_hours: ""
 website: ""
