--- a/data/cities/oklahoma-city/homeland-north-may-avenue.yml
+++ b/data/cities/oklahoma-city/homeland-north-may-avenue.yml
@@ -1,11 +1,11 @@
-id: 720792761
+id: 466837246
 type: way
-latitude: 35.56337
-longitude: -97.56826
+latitude: 35.56307
+longitude: -97.56785
 postcode: "73120"
 city: Oklahoma City
 street: "North May Avenue"
-housenumber: 9225
-phone: "+1 405 751 7595"
-opening_hours: "07:00-22:00"
-website: "https://www.homelandstores.com/StoreLocator/Store?L=267&M=&From=&S="
+housenumber: 9111
+phone: ""
+opening_hours: ""
+website: ""
