--- a/data/cities/tulsa/koory-organics.yml
+++ b/data/cities/tulsa/koory-organics.yml
@@ -1,11 +1,11 @@
-id: 1171901639
+id: 1171901641
 type: way
 latitude: 36.11835
-longitude: -95.92454
+longitude: -95.92465
 postcode: ""
 city: Tulsa
 street: "East 31st Street"
-housenumber: 4622
+housenumber: 
 phone: ""
 opening_hours: ""
-website: "https://www.ttownappliance.com/"
+website: ""
