--- a/data/cities/coweta/autozone.yml
+++ b/data/cities/coweta/autozone.yml
@@ -5,7 +5,7 @@ longitude: -95.6567
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
-housenumber: 
+housenumber: 13533
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 07:30-21:00; Su 09:00-20:00"
 website: ""
