--- a/data/cities/coweta/buddys-home-furnishings.yml
+++ b/data/cities/coweta/buddys-home-furnishings.yml
@@ -7,5 +7,5 @@ city: Coweta
 street: "South State Highway 51"
 housenumber: 
 phone: ""
-opening_hours: ""
-website: ""
+opening_hours: "Mo-Fr 09:00-18:00; Sa 09:00-17:00; Su off"
+website: "https://www.buddyrents.com/"
