--- a/data/cities/coweta/coweta-quick-change.yml
+++ b/data/cities/coweta/coweta-quick-change.yml
@@ -6,6 +6,6 @@ postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
 housenumber: 
-phone: ""
-opening_hours: ""
+phone: "+1 918 486 2023"
+opening_hours: "Tu-Fr 09:00-18:00; Sa 08:00-12:00; Su-Mo off"
 website: ""
