--- a/data/cities/coweta/okie-girls-hair-company.yml
+++ b/data/cities/coweta/okie-girls-hair-company.yml
@@ -1,11 +1,11 @@
-id: 8809049385
-type: node
-latitude: 35.96369
-longitude: -95.65195
+id: 1192081330
+type: way
+latitude: 35.96376
+longitude: -95.65192
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
-housenumber: 
-phone: ""
+housenumber: 13761
+phone: "+1 918 279 8992"
 opening_hours: ""
 website: ""
