--- a/data/cities/coweta/pretty-peepers-lash-studio.yml
+++ b/data/cities/coweta/pretty-peepers-lash-studio.yml
@@ -1,7 +1,7 @@
-id: 9529902750
-type: node
-latitude: 35.96301
-longitude: -95.65162
+id: 1192081333
+type: way
+latitude: 35.96307
+longitude: -95.65167
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
