--- a/data/cities/coweta/quiktrip.yml
+++ b/data/cities/coweta/quiktrip.yml
@@ -1,11 +1,11 @@
 id: 951705243
 type: way
-latitude: 35.95861
-longitude: -95.65063
+latitude: 35.95862
+longitude: -95.65064
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
-housenumber: 
+housenumber: 14131
 phone: ""
 opening_hours: ""
 website: ""
