--- a/data/cities/coweta/reflections-hair-salon.yml
+++ b/data/cities/coweta/reflections-hair-salon.yml
@@ -1,11 +1,11 @@
-id: 951705252
+id: 1192081336
 type: way
-latitude: 35.95813
-longitude: -95.65158
+latitude: 35.96287
+longitude: -95.6515
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
-housenumber: 
-phone: ""
+housenumber: 13793
+phone: "+1 918 486 1122"
 opening_hours: ""
 website: ""
