--- a/data/cities/coweta/t-dup-printing.yml
+++ b/data/cities/coweta/t-dup-printing.yml
@@ -1,7 +1,7 @@
-id: 9529902753
-type: node
-latitude: 35.96341
-longitude: -95.65162
+id: 1192081326
+type: way
+latitude: 35.96348
+longitude: -95.6515
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
