--- a/data/cities/coweta/the-loft-salon.yml
+++ b/data/cities/coweta/the-loft-salon.yml
@@ -5,7 +5,7 @@ longitude: -95.6514
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
-housenumber: 
+housenumber: 14087
 phone: ""
 opening_hours: ""
 website: ""
