--- a/data/cities/coweta/the-ups-store.yml
+++ b/data/cities/coweta/the-ups-store.yml
@@ -5,7 +5,7 @@ longitude: -95.6514
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
-housenumber: 
+housenumber: 14083
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 08:00-18:30; Sa 09:00-15:00; Su off"
 website: ""
