--- a/data/cities/coweta/vape-shop.yml
+++ b/data/cities/coweta/vape-shop.yml
@@ -5,7 +5,7 @@ longitude: -95.65265
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
-housenumber: 
+housenumber: 14050
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 09:00-22:00; Su 10:00-20:00"
 website: ""
