--- a/data/cities/coweta/walgreens.yml
+++ b/data/cities/coweta/walgreens.yml
@@ -5,7 +5,7 @@ longitude: -95.65151
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
-housenumber: 
+housenumber: 14003
 phone: ""
 opening_hours: ""
 website: ""
