--- a/data/cities/seminole/all-seasons-rv.yml
+++ b/data/cities/seminole/all-seasons-rv.yml
@@ -4,7 +4,7 @@ latitude: 35.31579
 longitude: -96.67068
 postcode: "74868"
 city: Seminole
-street: "N Highway 9"
+street: "North Highway 9"
 housenumber: 11722
 phone: ""
 opening_hours: ""
