--- a/data/cities/tulsa/quality-thrift-store.yml
+++ b/data/cities/tulsa/quality-thrift-store.yml
@@ -4,7 +4,7 @@ latitude: 36.08795
 longitude: -95.97405
 postcode: "74105"
 city: Tulsa
-street: "S Peoria Ave"
+street: "S Peoria Avenue"
 housenumber: 5133
 phone: "+1-918-743-1391"
 opening_hours: "Mo-Sa 09:00-19:00, Su 10:00-19:00"
