--- a/data/cities/broken-arrow/bass-pro-shops.yml
+++ b/data/cities/broken-arrow/bass-pro-shops.yml
@@ -7,5 +7,5 @@ city: Broken Arrow
 street: "Bass Pro Drive"
 housenumber: 101
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 09:00-21:00; Su 10:00-19:00"
 website: ""
