--- a/data/cities/broken-arrow/hobby-lobby.yml
+++ b/data/cities/broken-arrow/hobby-lobby.yml
@@ -7,5 +7,5 @@ city: Broken Arrow
 street: "Hillside Drive"
 housenumber: 754
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 09:00-20:00"
 website: ""
