update content and data

--- a/data/cities/bartlesville/aldi.yml
+++ b/data/cities/bartlesville/aldi.yml
@@ -8,4 +8,4 @@ street: "Southeast Washington Boulevard"
 housenumber: 2553
 phone: ""
 opening_hours: "Mo-Su 09:00-20:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/bartlesville/2553-se-washington-blvd"
