--- a/data/cities/oklahoma-city/aldi-north-cemetery-road.yml
+++ b/data/cities/oklahoma-city/aldi-north-cemetery-road.yml
@@ -8,4 +8,4 @@ street: "North Cemetery Road"
 housenumber: 935
 phone: "+1 844 475 1006"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/yukon/935-n-cemetery-road"
