--- a/data/cities/oklahoma-city/aldi-northwest-23rd-street.yml
+++ b/data/cities/oklahoma-city/aldi-northwest-23rd-street.yml
@@ -8,4 +8,4 @@ street: "Northwest 23rd Street"
 housenumber: 6010
 phone: "+1 844 475 1017"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/oklahoma-city/6010-n-w-23rd"
