--- a/data/cities/owasso/aldi.yml
+++ b/data/cities/owasso/aldi.yml
@@ -1,11 +1,11 @@
-id: 3352347999
-type: node
-latitude: 36.28774
-longitude: -95.83956
+id: 930440679
+type: way
+latitude: 36.28742
+longitude: -95.83943
 postcode: "74055"
 city: Owasso
 street: "North Owasso Expressway"
 housenumber: 9259
 phone: ""
 opening_hours: "Mo-Su 09:00-20:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/owasso/9259-n-owasso-expressway"
