--- a/data/cities/tulsa/aldi-east-21st-street.yml
+++ b/data/cities/tulsa/aldi-east-21st-street.yml
@@ -8,4 +8,4 @@ street: "East 21st Street"
 housenumber: 12572
 phone: ""
 opening_hours: "Mo-Su 09:00-20:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/tulsa/12572-e-21st-street"
