--- a/data/cities/tulsa/aldi-south-olympia-avenue.yml
+++ b/data/cities/tulsa/aldi-south-olympia-avenue.yml
@@ -8,4 +8,4 @@ street: "South Olympia Avenue"
 housenumber: 8205
 phone: ""
 opening_hours: "Mo-Su 09:00-20:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/tulsa/8205-s-olympia-ave"
