--- a/data/cities/tulsa/aldi.yml
+++ b/data/cities/tulsa/aldi.yml
@@ -8,4 +8,4 @@ street: "East 61st Street"
 housenumber: 8221
 phone: ""
 opening_hours: "Mo-Su 09:00-20:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/tulsa/8221-e-61st-street"
