--- a/data/cities/tulsa/tonsorial.yml
+++ b/data/cities/tulsa/tonsorial.yml
@@ -1,11 +1,11 @@
-id: 10253882126
-type: node
-latitude: 36.15541
-longitude: -95.98463
+id: 495927969
+type: way
+latitude: 36.14766
+longitude: -95.98177
 postcode: "74120"
 city: Tulsa
-street: "East 3rd Street"
-housenumber: 502
+street: "East 11th Street"
+housenumber: 416
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 09:00-18:00; Sa 09:00-16:00"
 website: "https://tonsorialtulsa.com/"
