--- a/data/cities/ada/aldi.yml
+++ b/data/cities/ada/aldi.yml
@@ -8,4 +8,4 @@ street: "Lonnie Abbott Boulevard"
 housenumber: 1320
 phone: "+1 833 747 5019"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/ada/1320-lonnie-abbott"
