--- a/data/cities/ardmore/aldi.yml
+++ b/data/cities/ardmore/aldi.yml
@@ -8,4 +8,4 @@ street: "North Commerce Street"
 housenumber: 510
 phone: "+1 844 475 1021"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/ardmore/510-n-commerce-st"
