--- a/data/cities/broken-arrow/aldi.yml
+++ b/data/cities/broken-arrow/aldi.yml
@@ -8,4 +8,4 @@ street: "West Kenosha Street"
 housenumber: 2400
 phone: ""
 opening_hours: "Mo-Su 09:00-20:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/broken-arrow/2400-w-kenosha-street"
