--- a/data/cities/chickasha/aldi.yml
+++ b/data/cities/chickasha/aldi.yml
@@ -8,4 +8,4 @@ street: "South 4th Street"
 housenumber: 2318
 phone: ""
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: ""
+website: "https://stores.aldi.us/ok/chickasha/2318-s-4th-st"
