--- a/data/cities/edmond/aldi.yml
+++ b/data/cities/edmond/aldi.yml
@@ -8,4 +8,4 @@ street: "West Edmond Road"
 housenumber: 1001
 phone: "+1 855 475 7033"
 opening_hours: "Mo, Th-Su 09:00-21:00, Tu 08:30-21:00, We 09:00-16:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/edmond/1001-w-edmond-rd"
