--- a/data/cities/enid/aldi.yml
+++ b/data/cities/enid/aldi.yml
@@ -8,4 +8,4 @@ street: "West Garriott Road"
 housenumber: 5001
 phone: "+1 844 475 1012"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/enid/5001-w-garriott-rd"
