--- a/data/cities/lawton/aldi.yml
+++ b/data/cities/lawton/aldi.yml
@@ -8,4 +8,4 @@ street: "Northwest Sheridan Road"
 housenumber: 935
 phone: "+1 844 475 1077"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/lawton/935-nw-sheridan-rd"
