--- a/data/cities/midwest-city/aldi.yml
+++ b/data/cities/midwest-city/aldi.yml
@@ -8,4 +8,4 @@ street: "South Air Depot Boulevard"
 housenumber: 601
 phone: "+1 888 475 1009"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/midwest-city/601-s-air-depot"
