--- a/data/cities/moore/aldi.yml
+++ b/data/cities/moore/aldi.yml
@@ -8,4 +8,4 @@ street: "Southwest 19th Street"
 housenumber: 601
 phone: "+1 844 475 1004"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/moore/601-sw-19th-street"
