--- a/data/cities/muskogee/aldi.yml
+++ b/data/cities/muskogee/aldi.yml
@@ -8,4 +8,4 @@ street: "West Shawnee Street"
 housenumber: 436
 phone: ""
 opening_hours: "Mo-Su 09:00-20:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/muskogee/436-w-shawnee-street"
