--- a/data/cities/norman/aldi.yml
+++ b/data/cities/norman/aldi.yml
@@ -8,4 +8,4 @@ street: "Classen Boulevard"
 housenumber: 3101
 phone: "+1 844 475 1083"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/norman/3101-classen-blvd"
