--- a/data/cities/oklahoma-city/aldi-north-may-avenue.yml
+++ b/data/cities/oklahoma-city/aldi-north-may-avenue.yml
@@ -8,4 +8,4 @@ street: "North May Avenue"
 housenumber: 4805
 phone: "+1 833 747 5095"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/oklahoma-city/4805-n-may-avenue"
