--- a/data/cities/oklahoma-city/aldi-north-pennsylvania-avenue.yml
+++ b/data/cities/oklahoma-city/aldi-north-pennsylvania-avenue.yml
@@ -8,4 +8,4 @@ street: "North Pennsylvania Avenue"
 housenumber: 13301
 phone: "+1 844 475 1014"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/oklahoma-city/13301-n-penn-ave"
