--- a/data/cities/oklahoma-city/aldi-southwest-59th-street.yml
+++ b/data/cities/oklahoma-city/aldi-southwest-59th-street.yml
@@ -8,4 +8,4 @@ street: "Southwest 59th Street"
 housenumber: 2150
 phone: "+1 844 475 1002"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/oklahoma-city/2150-sw-59th-street"
