--- a/data/cities/shawnee/aldi.yml
+++ b/data/cities/shawnee/aldi.yml
@@ -8,4 +8,4 @@ street: "North Kickapoo Street"
 housenumber: 4640
 phone: "+1 844 475 1007"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/shawnee/4640-n-kickapoo-st"
