--- a/data/cities/tulsa/aldi-east-103rd-street.yml
+++ b/data/cities/tulsa/aldi-east-103rd-street.yml
@@ -8,4 +8,4 @@ street: "East 103rd Street"
 housenumber: 8207
 phone: ""
 opening_hours: "Mo-Su 09:00-20:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ok/tulsa/8207-e-103rd-street"
