--- a/data/cities/norman/sams-club.yml
+++ b/data/cities/norman/sams-club.yml
@@ -6,6 +6,6 @@ postcode: "73072"
 city: Norman
 street: "West Main Street"
 housenumber: 3400
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1-405-307-8374"
+opening_hours: "Mo-Fr 10:00-20:00; Sa 09:00-20:00; Su 10:00-18:00"
+website: "https://www.samsclub.com/club/norman-ok-sams-club/4761"
