--- a/data/cities/midwest-city/winco-foods.yml
+++ b/data/cities/midwest-city/winco-foods.yml
@@ -4,8 +4,8 @@ latitude: 35.46478
 longitude: -97.39191
 postcode: "73110"
 city: Midwest City
-street: ""
-housenumber: 
-phone: ""
+street: "East Reno Avenue"
+housenumber: 7601
+phone: "405-233-3252"
 opening_hours: ""
 website: "https://www.wincofoods.com"
