update content and data

--- a/data/cities/oklahoma-city/braums.yml
+++ b/data/cities/oklahoma-city/braums.yml
@@ -1,11 +1,11 @@
-id: 238019833
+id: 284249016
 type: way
-latitude: 35.60957
-longitude: -97.5331
-postcode: ""
+latitude: 35.51183
+longitude: -97.59292
+postcode: "73112"
 city: Oklahoma City
-street: "West Memorial Road"
-housenumber: 1129
+street: ""
+housenumber: 
 phone: ""
 opening_hours: ""
 website: ""
