--- a/data/cities/sallisaw/walmart-supercenter.yml
+++ b/data/cities/sallisaw/walmart-supercenter.yml
@@ -7,5 +7,5 @@ city: Sallisaw
 street: "West Ruth Avenue"
 housenumber: 1101
 phone: "+1-918-775-4492"
-opening_hours: "24/7"
+opening_hours: ""
 website: "https://www.walmart.com/store/47/sallisaw-ok/whats-new"
