--- a/data/cities/tulsa/warehouse-market.yml
+++ b/data/cities/tulsa/warehouse-market.yml
@@ -1,11 +1,11 @@
-id: 363505772
+id: 257117422
 type: way
-latitude: 36.16798
-longitude: -95.90363
-postcode: "74115"
+latitude: 36.15604
+longitude: -95.95784
+postcode: "74104"
 city: Tulsa
-street: "North Sheridan Road"
-housenumber: 845
+street: "South Lewis Avenue"
+housenumber: 301
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 07:00-22:00"
 website: ""
