update content and data

--- a/data/cities/grove/lake-n-land-storage.yml
+++ b/data/cities/grove/lake-n-land-storage.yml
@@ -8,4 +8,4 @@ street: "East 290 Road"
 housenumber: 65251
 phone: "+19187867867"
 opening_hours: ""
-website: "lakenlandstorage.com"
+website: "https://www.lakenlandstorage.com/"
