--- a/data/cities/tulsa/jaguar.yml
+++ b/data/cities/tulsa/jaguar.yml
@@ -8,4 +8,4 @@ street: "South Memorial Drive"
 housenumber: 3953
 phone: "(888) 485-3296"
 opening_hours: ""
-website: "http://www.jaguartulsa.com/"
+website: "https://www.jaguartulsa.com/"
