--- a/data/cities/catoosa/reasors.yml
+++ b/data/cities/catoosa/reasors.yml
@@ -8,4 +8,4 @@ street: "North Old Highway 66"
 housenumber: 2500
 phone: ""
 opening_hours: ""
-website: "http://www.reasors.com/locations/store.php?store=17"
+website: "https://www.reasors.com/locations/store.php?store=17"
