--- a/data/cities/grove/on-target-guns-bows-and-range.yml
+++ b/data/cities/grove/on-target-guns-bows-and-range.yml
@@ -8,4 +8,4 @@ street: "US 59"
 housenumber: 1638
 phone: "+19187864867"
 opening_hours: "Mo-Sa 10:00-19:00"
-website: "http://ontargetgunsbowsandrange.com/"
+website: "https://www.ontargetgunsbowsandrange.com/"
