--- a/data/cities/jenks/reasors.yml
+++ b/data/cities/jenks/reasors.yml
@@ -8,4 +8,4 @@ street: "South Elm Street"
 housenumber: 446
 phone: "+1 918 299 3378"
 opening_hours: "24/7"
-website: "http://www.reasors.com/locations/store.php?store=20"
+website: "https://www.reasors.com/locations/store.php?store=20"
