--- a/data/cities/oklahoma-city/fedex-office.yml
+++ b/data/cities/oklahoma-city/fedex-office.yml
@@ -1,11 +1,11 @@
-id: 229089703
+id: 334911289
 type: way
-latitude: 35.53704
-longitude: -97.5669
-postcode: "73116"
+latitude: 35.61033
+longitude: -97.5606
+postcode: "73134"
 city: Oklahoma City
-street: "Northwest 63rd Street"
-housenumber: 3001
+street: "West Memorial Road"
+housenumber: 2601
 phone: ""
 opening_hours: ""
 website: ""
