--- a/data/cities/tulsa/oklahoma-home-grown.yml
+++ b/data/cities/tulsa/oklahoma-home-grown.yml
@@ -8,4 +8,4 @@ street: "South Lewis Avenue"
 housenumber: 6908
 phone: "+1-918-973-2190"
 opening_hours: "Mo-Su 08:00-20:00"
-website: "http://ohgllc.com"
+website: "https://ohgllc.com/"
