--- a/data/cities/tulsa/oros-auto-sales.yml
+++ b/data/cities/tulsa/oros-auto-sales.yml
@@ -8,4 +8,4 @@ street: "East Admiral Place"
 housenumber: 5945
 phone: "+1-918-794-5021"
 opening_hours: "Mo-Sa 10:00-18:00"
-website: "http://www.orosautosales.com"
+website: "https://www.orosautosales.com/"
