update content and data

--- a/data/cities/muldrow/piggly-wiggly.yml
+++ b/data/cities/muldrow/piggly-wiggly.yml
@@ -1,7 +1,7 @@
-id: 1157540305
-type: way
-latitude: 35.40568
-longitude: -94.58411
+id: 11295973965
+type: node
+latitude: 35.40548
+longitude: -94.58386
 postcode: "74948"
 city: Muldrow
 street: "East Shawntel Smith Boulevard"
