--- a/data/cities/muskogee/sinclair.yml
+++ b/data/cities/muskogee/sinclair.yml
@@ -1,11 +1,11 @@
-id: 1112409694
+id: 1112540774
 type: way
-latitude: 35.7412
-longitude: -95.30775
-postcode: "74403"
+latitude: 35.75353
+longitude: -95.36568
+postcode: "74401"
 city: Muskogee
-street: "Chandler Road"
-housenumber: 4300
+street: "North Main Street"
+housenumber: 550
 phone: ""
 opening_hours: ""
 website: ""
