--- a/data/cities/catoosa/ross.yml
+++ b/data/cities/catoosa/ross.yml
@@ -7,5 +7,5 @@ city: Catoosa
 street: "Haynes Road"
 housenumber: 19563
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 07:00-24:00"
 website: ""
