update content and data

--- a/data/cities/muskogee/dollar-tree.yml
+++ b/data/cities/muskogee/dollar-tree.yml
@@ -1,11 +1,11 @@
-id: 1112540776
+id: 1112552363
 type: way
-latitude: 35.75442
-longitude: -95.36529
+latitude: 35.77128
+longitude: -95.36965
 postcode: "74401"
 city: Muskogee
-street: "North Main Street"
-housenumber: 602
+street: "West Shawnee Street"
+housenumber: 934
 phone: ""
 opening_hours: ""
 website: ""
