--- a/data/cities/muskogee/sinclair.yml
+++ b/data/cities/muskogee/sinclair.yml
@@ -1,11 +1,11 @@
-id: 1112540774
+id: 1112409694
 type: way
-latitude: 35.75353
-longitude: -95.36568
-postcode: "74401"
+latitude: 35.7412
+longitude: -95.30775
+postcode: "74403"
 city: Muskogee
-street: "North Main Street"
-housenumber: 550
+street: "Chandler Road"
+housenumber: 4300
 phone: ""
 opening_hours: ""
 website: ""
