--- a/data/cities/oklahoma-city/sams-club.yml
+++ b/data/cities/oklahoma-city/sams-club.yml
@@ -1,11 +1,11 @@
-id: 497675908
+id: 238022244
 type: way
-latitude: 35.4584
-longitude: -97.61303
-postcode: "73128"
+latitude: 35.60809
+longitude: -97.54613
+postcode: "73134"
 city: Oklahoma City
-street: "Southwest 5th Street"
-housenumber: 5510
+street: "West Memorial Road"
+housenumber: 1900
 phone: ""
-opening_hours: "Mo-Sa 08:00-18:00"
+opening_hours: ""
 website: ""
