update content and data

--- a/data/cities/tulsa/kum-and-go-south-sheridan-road.yml
+++ b/data/cities/tulsa/kum-and-go-south-sheridan-road.yml
@@ -8,4 +8,4 @@ street: "South Sheridan Road"
 housenumber: 2109
 phone: ""
 opening_hours: "24/7"
-website: ""
+website: "https://www.kumandgo.com/store-locator?details=0883"
