--- a/data/cities/tulsa/kum-and-go.yml
+++ b/data/cities/tulsa/kum-and-go.yml
@@ -8,4 +8,4 @@ street: "Riverside Parkway"
 housenumber: 10010
 phone: ""
 opening_hours: "24/7"
-website: ""
+website: "https://www.kumandgo.com/store-locator?details=0874"
