--- a/data/cities/jenks/kum-and-go-south-peoria-avenue.yml
+++ b/data/cities/jenks/kum-and-go-south-peoria-avenue.yml
@@ -8,4 +8,4 @@ street: "South Peoria Avenue"
 housenumber: 11030
 phone: "+1 918 296 0361"
 opening_hours: "24/7"
-website: ""
+website: "https://www.kumandgo.com/store-locator?details=0844"
