--- a/data/cities/jenks/kum-and-go.yml
+++ b/data/cities/jenks/kum-and-go.yml
@@ -8,4 +8,4 @@ street: "South Elm Street"
 housenumber: 510
 phone: ""
 opening_hours: "24/7"
-website: ""
+website: "https://www.kumandgo.com/store-locator?details=0875"
