--- a/data/cities/moore/ace-party-supplies-and-showtime-concessions.yml
+++ b/data/cities/moore/ace-party-supplies-and-showtime-concessions.yml
@@ -8,4 +8,4 @@ street: "Southeast 19th Street"
 housenumber: 200
 phone: "+1-405-895-9902"
 opening_hours: "Mo-Fr 09:00-19:00; Sa 10:00-19:00"
-website: "http://www.acepartysupplies.com/"
+website: "https://acepartysupplies.com/"
