--- a/data/cities/owasso/kum-and-go-east-86th-street-north.yml
+++ b/data/cities/owasso/kum-and-go-east-86th-street-north.yml
@@ -8,4 +8,4 @@ street: "East 86th Street North"
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.kumandgo.com/store-locator?details=0876"
