--- a/data/cities/owasso/kum-and-go.yml
+++ b/data/cities/owasso/kum-and-go.yml
@@ -8,4 +8,4 @@ street: "East 16th Street"
 housenumber: 10603
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.kumandgo.com/store-locator?details=0886"
