--- a/data/cities/pryor-creek/kum-and-go.yml
+++ b/data/cities/pryor-creek/kum-and-go.yml
@@ -8,4 +8,4 @@ street: "South Mill Street"
 housenumber: 901
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.kumandgo.com/store-locator?details=3861"
