--- a/data/cities/stillwater/kum-and-go.yml
+++ b/data/cities/stillwater/kum-and-go.yml
@@ -8,4 +8,4 @@ street: "North Perkins Road"
 housenumber: 1890
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.kumandgo.com/store-locator?details=0878"
