--- a/data/cities/tulsa/kum-and-go-west-81st-street.yml
+++ b/data/cities/tulsa/kum-and-go-west-81st-street.yml
@@ -8,4 +8,4 @@ street: "West 81st Street"
 housenumber: 1111
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.kumandgo.com/store-locator?details=0887"
