update content and data

--- a/data/cities/coweta/autozone.yml
+++ b/data/cities/coweta/autozone.yml
@@ -8,4 +8,4 @@ street: "South State Highway 51"
 housenumber: 13533
 phone: ""
 opening_hours: "Mo-Sa 07:30-21:00; Su 09:00-20:00"
-website: ""
+website: "https://www.autozone.com/locations/ok/coweta/13533-s--state-hwy-51.html"
