--- a/data/cities/duncan/autozone.yml
+++ b/data/cities/duncan/autozone.yml
@@ -8,4 +8,4 @@ street: "North Highway 81"
 housenumber: 502
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.autozone.com/locations/ok/duncan/502-n-hwy-81.html"
