--- a/data/cities/glenpool/autozone.yml
+++ b/data/cities/glenpool/autozone.yml
@@ -8,4 +8,4 @@ street: "Vancouver Avenue"
 housenumber: 12121
 phone: "(918) 216-8030"
 opening_hours: "Mo-Sa 07:30-21:00; Su 09:00-20:00"
-website: ""
+website: "https://www.autozone.com/locations/ok/glenpool/12121-s-vancouver-ave.html"
