--- a/data/cities/oklahoma-city/autozone.yml
+++ b/data/cities/oklahoma-city/autozone.yml
@@ -8,4 +8,4 @@ street: "North May Avenue"
 housenumber: 6408
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.autozone.com/locations/ok/oklahoma-city/6408-n-may-ave.html"
