--- a/data/cities/ardmore/academy-sports-outdoors.yml
+++ b/data/cities/ardmore/academy-sports-outdoors.yml
@@ -8,4 +8,4 @@ street: "12th Avenue Northwest"
 housenumber: 1605
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.academy.com/storelocator/oklahoma/ardmore/store-0320"
