--- a/data/cities/hugo/autozone.yml
+++ b/data/cities/hugo/autozone.yml
@@ -8,4 +8,4 @@ street: "East Jackson Street"
 housenumber: 504
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.autozone.com/locations/ok/hugo/504-e-jackson.html"
