--- a/data/cities/mcalester/autozone.yml
+++ b/data/cities/mcalester/autozone.yml
@@ -8,4 +8,4 @@ street: "East Carl Albert Parkway"
 housenumber: 1112
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.autozone.com/locations/ok/mcalester/1112-e-carl-albert-pkwy.html"
