--- a/data/cities/muskogee/advance-auto-parts.yml
+++ b/data/cities/muskogee/advance-auto-parts.yml
@@ -8,4 +8,4 @@ street: "North York Street"
 housenumber: 800
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.advanceautoparts.com/ok/muskogee/800-n-york-st"
