--- a/data/cities/muskogee/autozone.yml
+++ b/data/cities/muskogee/autozone.yml
@@ -8,4 +8,4 @@ street: "North Main Street"
 housenumber: 1900
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.autozone.com/locations/ok/muskogee/1900-n-main.html"
