--- a/data/cities/oklahoma-city/academy-sports-outdoors.yml
+++ b/data/cities/oklahoma-city/academy-sports-outdoors.yml
@@ -8,4 +8,4 @@ street: ""
 housenumber: 
 phone: ""
 opening_hours: "Su-Th 09:00-21:00; Fr 09:00-22:00; Sa 08:00-22:00"
-website: ""
+website: "https://www.academy.com/storelocator/oklahoma/oklahoma-city/store-0086"
