--- a/data/cities/oklahoma-city/glo-tanning-north-may-avenue.yml
+++ b/data/cities/oklahoma-city/glo-tanning-north-may-avenue.yml
@@ -5,7 +5,7 @@ longitude: -97.56628
 postcode: "73116"
 city: Oklahoma City
 street: "North May Avenue"
-housenumber: 
-phone: ""
-opening_hours: ""
-website: ""
+housenumber: 7105
+phone: "+1 405 708 6320"
+opening_hours: "Mo-Fr 09:00-21:00; Sa-Su 10:00-18:00"
+website: "https://www.glotanning.com/location/nichols-hills"
