--- a/data/cities/pryor-creek/autozone.yml
+++ b/data/cities/pryor-creek/autozone.yml
@@ -8,4 +8,4 @@ street: "South Mill Street"
 housenumber: 605
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.autozone.com/locations/ok/pryor/605-s-mill-rd.html"
