--- a/data/cities/sapulpa/autozone.yml
+++ b/data/cities/sapulpa/autozone.yml
@@ -8,4 +8,4 @@ street: "South Main Street"
 housenumber: 629
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.autozone.com/locations/ok/sapulpa/629-s-main.html"
