--- a/data/cities/stillwater/autozone.yml
+++ b/data/cities/stillwater/autozone.yml
@@ -8,4 +8,4 @@ street: "East 6th Avenue"
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.autozone.com/locations/ok/stillwater/1007-e-6th-st.html"
