--- a/data/cities/tulsa/academy-sports-outdoors.yml
+++ b/data/cities/tulsa/academy-sports-outdoors.yml
@@ -8,4 +8,4 @@ street: "South 107th East Avenue"
 housenumber: 7850
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.academy.com/storelocator/oklahoma/tulsa/store-0084"
