--- a/data/cities/tulsa/securcare-self-storage-south-mingo-road-3.yml
+++ b/data/cities/tulsa/securcare-self-storage-south-mingo-road-3.yml
@@ -1,11 +1,11 @@
-id: 497459345
+id: 691102865
 type: way
-latitude: 36.09957
-longitude: -95.86915
-postcode: "74146"
+latitude: 36.07139
+longitude: -95.86931
+postcode: "74133"
 city: Tulsa
 street: "South Mingo Road"
-housenumber: 4360
+housenumber: 6308
 phone: ""
-opening_hours: "Mo-Fr 10:00-13:00,14:00-18:00; Sa 10:00-13:00,14:00-17:00"
-website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/4360-south-mingo-road"
+opening_hours: "Mo 09:45-13:00,14:00-18:00; We-Fr 10:00-13:00,14:00-18:00; Sa 10:00-13:00,14:00-17:00"
+website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/6308-south-mingo-road"
