update content and data

--- a/data/cities/oklahoma-city/braums.yml
+++ b/data/cities/oklahoma-city/braums.yml
@@ -1,11 +1,11 @@
-id: 244646802
+id: 284249016
 type: way
-latitude: 35.53431
-longitude: -97.56532
-postcode: ""
+latitude: 35.51183
+longitude: -97.59292
+postcode: "73112"
 city: Oklahoma City
-street: "North May Avenue"
-housenumber: 6200
-phone: "+1 405 842 1366"
-opening_hours: "Mo-Su 06:00-22:45"
+street: ""
+housenumber: 
+phone: ""
+opening_hours: ""
 website: ""
