--- a/data/cities/pryor-creek/dollar-tree.yml
+++ b/data/cities/pryor-creek/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "South Mill Street"
 housenumber: 571
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/ok/pryor/4565/"
