--- a/data/cities/tulsa/tranquility-nails-and-spa.yml
+++ b/data/cities/tulsa/tranquility-nails-and-spa.yml
@@ -6,6 +6,6 @@ postcode: "74135"
 city: Tulsa
 street: "South Yale Avenue"
 housenumber: 4012
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 918-574-2700"
+opening_hours: "Mo-Sa 09:30-19:30; Su 11:30-18:00"
+website: "https://tranquilitynailsspa.com/"
