--- a/data/cities/ardmore/dollar-tree.yml
+++ b/data/cities/ardmore/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "12th Avenue Northwest"
 housenumber: 2401
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/ok/ardmore/3587/"
