--- a/data/cities/atoka/dollar-tree.yml
+++ b/data/cities/atoka/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "South Mississippi Avenue"
 housenumber: 1620
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/ok/atoka/8251/"
