--- a/data/cities/hugo/dollar-tree.yml
+++ b/data/cities/hugo/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "East Jackson Street"
 housenumber: 1818
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/ok/hugo/6570/"
