--- a/data/cities/jenks/kum-and-go.yml
+++ b/data/cities/jenks/kum-and-go.yml
@@ -1,11 +1,11 @@
-id: 319463637
+id: 196802788
 type: way
-latitude: 36.00332
-longitude: -95.97654
+latitude: 36.01807
+longitude: -95.97687
 postcode: "74037"
 city: Jenks
-street: "South Peoria Avenue"
-housenumber: 11030
-phone: "+1 918 296 0361"
+street: "South Elm Street"
+housenumber: 510
+phone: ""
 opening_hours: "24/7"
-website: "https://www.kumandgo.com/store-locator?details=0844"
+website: "https://www.kumandgo.com/store-locator?details=0875"
