--- a/data/cities/lawton/dollar-tree.yml
+++ b/data/cities/lawton/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Northwest 2nd Street"
 housenumber: 273
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/ok/lawton/5645/"
