--- a/data/cities/muskogee/dollar-tree-west-shawnee-street.yml
+++ b/data/cities/muskogee/dollar-tree-west-shawnee-street.yml
@@ -8,4 +8,4 @@ street: "West Shawnee Street"
 housenumber: 934
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/ok/muskogee/3299/"
