--- a/data/cities/muskogee/dollar-tree.yml
+++ b/data/cities/muskogee/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "North Main Street"
 housenumber: 602
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/ok/muskogee/932/"
