--- a/data/cities/oklahoma-city/dollar-tree.yml
+++ b/data/cities/oklahoma-city/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "North May Avenue"
 housenumber: 10908
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/ok/oklahoma-city/1512/"
