--- a/data/cities/tulsa/atlas-credit.yml
+++ b/data/cities/tulsa/atlas-credit.yml
@@ -4,8 +4,8 @@ latitude: 36.10487
 longitude: -95.92329
 postcode: "74135"
 city: Tulsa
-street: ""
-housenumber: 
-phone: ""
-opening_hours: ""
-website: ""
+street: "East 41st Street"
+housenumber: 4717
+phone: "+1 918-213-0300"
+opening_hours: "Mo-Fr 08:30-17:30; Sa-Su off"
+website: "https://atlascredit.com/location/personal-loans/ok/tulsa"
