--- a/data/cities/tulsa/dollar-tree.yml
+++ b/data/cities/tulsa/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Riverside Parkway"
 housenumber: 9591-E
 phone: ""
 opening_hours: "Su 10:00-20:00; Mo-Sa 09:00-21:00"
-website: ""
+website: "https://www.dollartree.com/locations/ok/tulsa/2289/"
