--- a/data/cities/tulsa/t-mobile-east-41st-street.yml
+++ b/data/cities/tulsa/t-mobile-east-41st-street.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Tulsa
 street: "East 41st Street"
 housenumber: 5336
-phone: ""
+phone: "+1 918-270-1722"
 opening_hours: "Mo-Sa 08:00-20:00; Su 08:00-18:00"
-website: ""
+website: "https://www.t-mobile.com/stores/bd/t-mobile-tulsa-ok-74135-3sjv/"
