update content and data

--- a/data/cities/tulsa/burlington.yml
+++ b/data/cities/tulsa/burlington.yml
@@ -6,6 +6,6 @@ postcode: "74112"
 city: Tulsa
 street: "South Yale Avenue"
 housenumber: 1887
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 918-747-7293"
+opening_hours: "Mo-Th,Su 09:00-23:00; Fr-Sa 09:00-24:00"
+website: "https://stores.burlington.com/ok/tulsa/1093/"
