--- a/data/cities/tulsa/t-town-appliance.yml
+++ b/data/cities/tulsa/t-town-appliance.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Tulsa
 street: "East 31st Street"
 housenumber: 4622
-phone: ""
-opening_hours: ""
+phone: "+1 918-221-4989"
+opening_hours: "Mo,We-Fr 10:00-14:00; Tu,Sa 10:00-13:00; Su off"
 website: "https://www.ttownappliance.com/"
