--- a/data/cities/tulsa/apertures-photo.yml
+++ b/data/cities/tulsa/apertures-photo.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Tulsa
 street: "South Yale Avenue"
 housenumber: 3135
-phone: ""
-opening_hours: ""
+phone: "+1 918-742-0500"
+opening_hours: "Mo-Fr 10:00-18:00; Sa 10:00-14:00; Su off"
 website: "https://www.aperturesphoto.com/"
