--- a/data/cities/tulsa/baileys-top-hat-magic-and-fun-shop.yml
+++ b/data/cities/tulsa/baileys-top-hat-magic-and-fun-shop.yml
@@ -6,6 +6,6 @@ postcode: "74135"
 city: Tulsa
 street: "East 41st Street"
 housenumber: 4713
-phone: ""
+phone: "+1 918-663-5550"
 opening_hours: ""
-website: ""
+website: "https://www.tophatmagic.com"
