--- a/data/cities/tulsa/catholic-book-and-gift-store.yml
+++ b/data/cities/tulsa/catholic-book-and-gift-store.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Tulsa
 street: "South Yale Avenue"
 housenumber: 3141
-phone: ""
-opening_hours: ""
+phone: "+1 918-745-0196"
+opening_hours: "Mo-Fr 10:00-17:30; Sa 10:00-16:00; Su off"
 website: "https://catholicbookandgifts.com/"
