--- a/data/cities/tulsa/koory-organics.yml
+++ b/data/cities/tulsa/koory-organics.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Tulsa
 street: "East 31st Street"
 housenumber: 4618
-phone: ""
+phone: "+1 918-850-0110"
 opening_hours: ""
-website: ""
+website: "https://kooryorganics.com/"
