--- a/data/cities/tulsa/reasors.yml
+++ b/data/cities/tulsa/reasors.yml
@@ -6,6 +6,6 @@ postcode: "74112"
 city: Tulsa
 street: "South Yale Avenue"
 housenumber: 1885
-phone: ""
+phone: "+1 918-293-2244"
 opening_hours: "Mo-Su 07:00-23:00"
-website: ""
+website: "https://www.reasors.com/stores/yale"
