--- a/data/cities/tulsa/sanchez-tires.yml
+++ b/data/cities/tulsa/sanchez-tires.yml
@@ -6,6 +6,6 @@ postcode: "74135"
 city: Tulsa
 street: "South Yale Avenue"
 housenumber: 3252
-phone: ""
-opening_hours: "Mo-Fr 08:00-19:00"
-website: ""
+phone: "+1 918-932-8140"
+opening_hours: "Mo-Fr 08:00-19:00; Sa 08:00-18:00; Su 08:00-16:00"
+website: "https://sanchez-tires-llc.business.site/"
