--- a/data/cities/tulsa/securcare-self-storage-south-yale-avenue.yml
+++ b/data/cities/tulsa/securcare-self-storage-south-yale-avenue.yml
@@ -6,6 +6,6 @@ postcode: "74135"
 city: Tulsa
 street: "South Yale Avenue"
 housenumber: 3210
-phone: ""
-opening_hours: ""
-website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/3210-south-yale-avenue"
+phone: "+1 918-986-8385"
+opening_hours: "Mo-Fr 10:00-18:00; Sa 10:00-17:00; Su off"
+website: "https://www.securcareselfstorage.com/storage/oklahoma/storage-units-tulsa/3210-S-Yale-Ave-1047"
