--- a/data/cities/tulsa/the-mens-groom-room.yml
+++ b/data/cities/tulsa/the-mens-groom-room.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Tulsa
 street: "East 31st Street"
 housenumber: 4620
-phone: ""
-opening_hours: ""
+phone: "+1 539-664-4740"
+opening_hours: "Mo-Tu 10:30-17:00; We,Sa 10:30-18:00; Th-Fr 10:30-19:00; Su off"
 website: "https://the-mens-groom-room.business.site/"
