--- a/data/cities/tulsa/tulsa-powersports.yml
+++ b/data/cities/tulsa/tulsa-powersports.yml
@@ -6,6 +6,6 @@ postcode: "74114"
 city: Tulsa
 street: "East 21st Street"
 housenumber: 4926
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 918-992-2006"
+opening_hours: "Mo,Su off; Tu-Fr 09:00-18:00; Sa 09:00-16:00"
+website: "https://tptulsa.com/"
