--- a/data/cities/tulsa/walmart-neighborhood-market-east-21st-street.yml
+++ b/data/cities/tulsa/walmart-neighborhood-market-east-21st-street.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "East 21st Street"
 housenumber: 4720
 phone: "+1-918-392-7020"
-opening_hours: "Mo-Su 06:00-24:00"
-website: "https://www.walmart.com/store/3340/tulsa-ok/whats-new"
+opening_hours: "06:00-23:00; Dec 25 off"
+website: "https://www.walmart.com/store/3340-tulsa-ok"
