update content and data

--- a/data/cities/broken-arrow/eleven01-barber-lounge.yml
+++ b/data/cities/broken-arrow/eleven01-barber-lounge.yml
@@ -8,4 +8,4 @@ street: "South Elm Place"
 housenumber: 3786
 phone: "+1-918-884-7140"
 opening_hours: ""
-website: "facebook.com/eleven01lounge"
+website: ""
