--- a/data/cities/grove/oreilly-auto-parts.yml
+++ b/data/cities/grove/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "South Main Street"
 housenumber: 620
 phone: "+19187869025"
 opening_hours: "Mo-Sa 07:30-21:00; Su 09:00-20:00"
-website: "locations.oreilly.com"
+website: "https://locations.oreillyauto.com/ok/grove/autoparts-4088.html"
