--- a/data/cities/oklahoma-city/under-armour-factory-house.yml
+++ b/data/cities/oklahoma-city/under-armour-factory-house.yml
@@ -8,4 +8,4 @@ street: "West Reno Avenue"
 housenumber: 7624
 phone: "+1 405 789 5452"
 opening_hours: ""
-website: ""
+website: "https://store-locations.underarmour.com/ok/oklahoma-city/82"
