--- a/data/cities/stillwater/u-s-cellular.yml
+++ b/data/cities/stillwater/u-s-cellular.yml
@@ -1,11 +1,11 @@
-id: 236346604
+id: 1230752576
 type: way
-latitude: 36.12941
-longitude: -97.05232
-postcode: "74075"
+latitude: 36.12817
+longitude: -97.04993
+postcode: "74074"
 city: Stillwater
 street: "North Perkins Road"
-housenumber: 
+housenumber: 603B
 phone: ""
 opening_hours: ""
 website: ""
