--- a/data/cities/tulsa/ziegler-art-and-frame.yml
+++ b/data/cities/tulsa/ziegler-art-and-frame.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Tulsa
 street: "North Lewis Avenue"
 housenumber: 6
-phone: ""
+phone: "+1 918-584-2217"
 opening_hours: "Mo-Fr 09:00-17:30; Sa 09:00-16:00"
-website: ""
+website: "https://www.zieglerart.com/"
