--- a/data/cities/midwest-city/mariner-finance.yml
+++ b/data/cities/midwest-city/mariner-finance.yml
@@ -8,4 +8,4 @@ street: "Southeast 15th Street"
 housenumber: 5912
 phone: "405-694-4024"
 opening_hours: ""
-website: "https://loans.marinerfinance.com/branch-locator/oklahoma/personal-loans-in-midwest-city-ok?utm_source=google&utm_medium=gmb_directories&utm_campaign=directories"
+website: "https://loans.marinerfinance.com/branch-locator/oklahoma/personal-loans-in-midwest-city-ok"
