--- a/data/cities/moore/costco.yml
+++ b/data/cities/moore/costco.yml
@@ -8,4 +8,4 @@ street: "South Telephone Road"
 housenumber: 2651
 phone: "+14053007661"
 opening_hours: "Mo-Fr 10:00-20:30; Sa 09:30-19:00; Su 10:00-18:00"
-website: "https://www.costco.com/warehouse-locations/moore-OK-1444.html?utm_term=KW&utm_campaign=Homepage&utm_medium=GMB&utm_source=Google&utm_content=Link"
+website: "https://www.costco.com/warehouse-locations/moore-OK-1444.html"
