--- a/data/cities/oklahoma-city/bc-clark-jewelers.yml
+++ b/data/cities/oklahoma-city/bc-clark-jewelers.yml
@@ -8,4 +8,4 @@ street: "North May Avenue"
 housenumber: 12042
 phone: "+14057554040"
 opening_hours: "Mo-Sa 10:00-18:00"
-website: "https://bcclark.com/?utm_source=local&utm_medium=organic&utm_campaign=gmb_northpark"
+website: "https://bcclark.com/"
