--- a/data/cities/tulsa/anthousai-flowers.yml
+++ b/data/cities/tulsa/anthousai-flowers.yml
@@ -8,4 +8,4 @@ street: "East Admiral Boulevard"
 housenumber: 2411
 phone: ""
 opening_hours: "We-Fr 11:00-17:00; Sa 09:00-12:00; Su 12:00-16:00"
-website: ""
+website: "https://anthousaiflorals.com/"
