--- a/data/cities/tulsa/bryde.yml
+++ b/data/cities/tulsa/bryde.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "East Admiral Boulevard"
 housenumber: 2409
 phone: ""
-opening_hours: "by appointment"
-website: ""
+opening_hours: "Su 16:00-19:00; By appointment only"
+website: "https://www.shopbryde.com/"
