--- a/data/cities/tulsa/golden-salon.yml
+++ b/data/cities/tulsa/golden-salon.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "East Admiral Boulevard"
 housenumber: 2403
 phone: ""
-opening_hours: ""
-website: ""
+opening_hours: "Tu-Sa 10:00-18:00"
+website: "https://goldensalontulsa.glossgenius.com/"
