--- a/data/cities/tulsa/jo-and-june-vintage.yml
+++ b/data/cities/tulsa/jo-and-june-vintage.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "East Admiral Boulevard"
 housenumber: 
 phone: ""
-opening_hours: ""
-website: ""
+opening_hours: "Mo off; Tu-Th 11:00-17:00; Fr 11:00-18:00; Sa 09:00-18:00; Su 12:00-17:00"
+website: "https://joandjune.com/"
