--- a/data/cities/tulsa/merry-make-and-do.yml
+++ b/data/cities/tulsa/merry-make-and-do.yml
@@ -6,6 +6,6 @@ postcode: "74110"
 city: Tulsa
 street: "East Admiral Boulevard"
 housenumber: 2306
-phone: ""
+phone: "+1 918-289-5619"
 opening_hours: "Tu-Sa 11:00-18:00; Su 12:00-17:00"
-website: ""
+website: "https://marymakeanddo.com/"
