update content and data

--- a/data/cities/muskogee/family-dollar.yml
+++ b/data/cities/muskogee/family-dollar.yml
@@ -1,11 +1,11 @@
-id: 1171583761
+id: 255333700
 type: way
-latitude: 35.72776
-longitude: -95.34134
-postcode: "74403"
+latitude: 35.75464
+longitude: -95.4168
+postcode: "74401"
 city: Muskogee
-street: "South York Street"
-housenumber: 1329
-phone: ""
-opening_hours: ""
-website: ""
+street: "West Okmulgee Avenue"
+housenumber: 4411
+phone: "+1 918 709 7237"
+opening_hours: "Mo-Su 09:00-21:00"
+website: "https://www.familydollar.com/locations/ok/muskogee/25200/"
