--- a/data/cities/muskogee/oreilly-auto-parts.yml
+++ b/data/cities/muskogee/oreilly-auto-parts.yml
@@ -1,11 +1,11 @@
-id: 1112547118
-type: way
-latitude: 35.76904
-longitude: -95.35866
+id: 5598965267
+type: node
+latitude: 35.75682
+longitude: -95.40196
 postcode: "74401"
 city: Muskogee
-street: "North Main Street"
-housenumber: 1907
-phone: ""
-opening_hours: ""
-website: ""
+street: "North 32nd Street"
+housenumber: 220
+phone: "+1 918 686 8837"
+opening_hours: "Mo-Sa 07:30-21:00; Su 09:00-20:00"
+website: "https://locations.oreillyauto.com/ok/muskogee/autoparts-250.html"
