--- a/data/cities/oklahoma-city/james-avery-jewelry-west-memorial-road.yml
+++ b/data/cities/oklahoma-city/james-avery-jewelry-west-memorial-road.yml
@@ -6,6 +6,6 @@ postcode: "73134"
 city: Oklahoma City
 street: "West Memorial Road"
 housenumber: 2501
-phone: "+1-405-755-5220"
+phone: "+1 405 751 1424"
 opening_hours: "Mo-Sa 10:00-21:00, Su 12:00-19:00"
-website: "https://www.jamesavery.com/custserv/store_details.jsp?storeId=802"
+website: "https://www.jamesavery.com/store-details?store=VM0035"
