--- a/data/cities/ponca-city/cato.yml
+++ b/data/cities/ponca-city/cato.yml
@@ -1,7 +1,7 @@
-id: 8083387098
-type: node
-latitude: 36.73956
-longitude: -97.06779
+id: 867186674
+type: way
+latitude: 36.7395
+longitude: -97.06765
 postcode: "74601"
 city: Ponca City
 street: "North 14th Street"
