--- a/data/cities/ponca-city/tractor-supply-company.yml
+++ b/data/cities/ponca-city/tractor-supply-company.yml
@@ -1,7 +1,7 @@
-id: 8083387097
-type: node
-latitude: 36.73954
-longitude: -97.06838
+id: 1231942104
+type: way
+latitude: 36.73949
+longitude: -97.06806
 postcode: "74601"
 city: Ponca City
 street: "North 14th Street"
