--- a/data/cities/coweta/t-dup-printing.yml
+++ b/data/cities/coweta/t-dup-printing.yml
@@ -1,11 +1,11 @@
-id: 1192081326
+id: 951705252
 type: way
-latitude: 35.96348
-longitude: -95.6515
+latitude: 35.95813
+longitude: -95.65158
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
-housenumber: 13781
+housenumber: 
 phone: "+1 918 279 1018"
 opening_hours: ""
 website: ""
