--- a/data/cities/muskogee/hamby-appliance-warehouse.yml
+++ b/data/cities/muskogee/hamby-appliance-warehouse.yml
@@ -6,6 +6,6 @@ postcode: "74401"
 city: Muskogee
 street: "West Okmulgee Avenue"
 housenumber: 3916
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 918 682 8500"
+opening_hours: "Mo-Sa 09:00-18:00"
+website: "https://www.hambytvandappliance.com/"
