--- a/data/cities/oklahoma-city/the-home-depot.yml
+++ b/data/cities/oklahoma-city/the-home-depot.yml
@@ -1,11 +1,11 @@
-id: 497276917
+id: 334910887
 type: way
-latitude: 35.39394
-longitude: -97.50395
-postcode: "73149"
+latitude: 35.61504
+longitude: -97.55242
+postcode: "73134"
 city: Oklahoma City
-street: "South Shields Boulevard"
-housenumber: 7400
-phone: ""
+street: "North Pennsylvania Avenue"
+housenumber: 14201
+phone: "+1 405 749 1590"
 opening_hours: ""
-website: ""
+website: "https://www.homedepot.com/l/Quail-Springs/OK/Oklahoma-City/73134/3919"
