--- a/data/cities/tahlequah/at-the-y-liquor.yml
+++ b/data/cities/tahlequah/at-the-y-liquor.yml
@@ -1,11 +1,11 @@
-id: 8166720556
-type: node
-latitude: 35.86061
-longitude: -94.97713
+id: 1232061521
+type: way
+latitude: 35.86054
+longitude: -94.97732
 postcode: "74464"
 city: Tahlequah
 street: "South Muskogee Avenue"
 housenumber: 5571
-phone: "918-456-9463"
-opening_hours: "Mo-Sa 09:00-22:00, Su 12:00-17:00"
+phone: "+1 918 456 9463"
+opening_hours: "Mo-Sa 09:00-22:00; Su 12:00-17:00"
 website: ""
