update content and data

--- a/data/cities/elk-city/the-dugout-c-store.yml
+++ b/data/cities/elk-city/the-dugout-c-store.yml
@@ -1,11 +1,11 @@
-id: 5736417086
-type: node
-latitude: 35.41139
-longitude: -99.41905
+id: 1232576469
+type: way
+latitude: 35.41132
+longitude: -99.41921
 postcode: "73644"
 city: Elk City
 street: "West 3rd Street"
 housenumber: 1032
-phone: "+1-580-225-2005"
+phone: "+1 580 225 2005"
 opening_hours: ""
-website: "http://thedugoutc-store.com"
+website: ""
