--- a/data/cities/medicine-park/basecamp-adventure-outfitters.yml
+++ b/data/cities/medicine-park/basecamp-adventure-outfitters.yml
@@ -1,11 +1,11 @@
 id: 5292459262
 type: node
-latitude: 34.72713
-longitude: -98.49903
+latitude: 34.72711
+longitude: -98.49904
 postcode: "73557"
 city: Medicine Park
 street: "East Lake Drive"
 housenumber: 206
-phone: "+1-401-308-5553"
+phone: "+1 580 574 8955"
 opening_hours: ""
-website: "http://www.basecampao.com/"
+website: ""
