--- a/data/cities/moore/lady-janes-haircuts-for-men.yml
+++ b/data/cities/moore/lady-janes-haircuts-for-men.yml
@@ -7,5 +7,5 @@ city: Moore
 street: "Southwest 19th Street"
 housenumber: 780
 phone: "+1-405-627-3260"
-opening_hours: "Mo-Th 10:00-20:00; Fr 09:00-20:00; Sa 09:00-18:00; Sa 10:00-17:00"
+opening_hours: "Mo-Th 10:00-20:00; Fr 09:00-20:00; Sa 09:00-18:00,10:00-17:00"
 website: "https://ladyjanes.com/"
