--- a/data/cities/newcastle/embroidery-etc.yml
+++ b/data/cities/newcastle/embroidery-etc.yml
@@ -8,4 +8,4 @@ street: "North Main Street"
 housenumber: 704
 phone: "+1-405-775-0500"
 opening_hours: ""
-website: "http://www.embroideryokc.com"
+website: ""
