--- a/data/cities/norman/robinsons.yml
+++ b/data/cities/norman/robinsons.yml
@@ -5,7 +5,7 @@ longitude: -97.43956
 postcode: "73069"
 city: Norman
 street: "East Main Street"
-housenumber: 325
+housenumber: 300
 phone: "+1 405 579 9790"
 opening_hours: ""
-website: "http://robinsonsrepurposed.com"
+website: "https://www.houseofrobinson.co/"
