--- a/data/cities/oklahoma-city/womens-health-boutique.yml
+++ b/data/cities/oklahoma-city/womens-health-boutique.yml
@@ -6,6 +6,6 @@ postcode: "73120"
 city: Oklahoma City
 street: "North May Avenue"
 housenumber: 12062
-phone: "+14059360030"
+phone: "+1 405 936 0030"
 opening_hours: "Mo-Fr 9:30-17:00"
-website: "http://womensboutiqueokc.com/"
+website: ""
