update content and data

--- a/data/cities/stillwater/oncue.yml
+++ b/data/cities/stillwater/oncue.yml
@@ -1,11 +1,11 @@
-id: 209320278
+id: 209322784
 type: way
-latitude: 36.13029
-longitude: -97.0597
+latitude: 36.1265
+longitude: -97.06247
 postcode: "74075"
 city: Stillwater
-street: "North Main Street"
-housenumber: 
+street: "North Duck Street"
+housenumber: 1120
 phone: ""
 opening_hours: ""
 website: ""
