--- a/data/cities/tulsa/infinity-nails-and-spa.yml
+++ b/data/cities/tulsa/infinity-nails-and-spa.yml
@@ -1,7 +1,7 @@
-id: 9810348179
-type: node
-latitude: 36.02417
-longitude: -95.94857
+id: 495189835
+type: way
+latitude: 36.02415
+longitude: -95.94869
 postcode: "74137"
 city: Tulsa
 street: "Riverside Parkway"
