--- a/data/cities/coweta/oreilly-auto-parts.yml
+++ b/data/cities/coweta/oreilly-auto-parts.yml
@@ -6,6 +6,6 @@ postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
 housenumber: 14211
-phone: ""
-opening_hours: ""
+phone: "+1 918 486 2177"
+opening_hours: "Mo-Sa 07:30-21:00; Su 09:00-20:00"
 website: ""
