update content and data

--- a/data/cities/oklahoma-city/braums-2.yml
+++ b/data/cities/oklahoma-city/braums-2.yml
@@ -1,8 +1,8 @@
-id: 4610562229
-type: node
-latitude: 35.5243
-longitude: -97.54622
-postcode: ""
+id: 284249016
+type: way
+latitude: 35.51183
+longitude: -97.59292
+postcode: "73112"
 city: Oklahoma City
 street: ""
 housenumber: 
