--- a/data/cities/tulsa/american-rental-and-sales-inc.yml
+++ b/data/cities/tulsa/american-rental-and-sales-inc.yml
@@ -1,7 +1,7 @@
-id: 10275418271
-type: node
-latitude: 36.08733
-longitude: -95.87043
+id: 331551597
+type: way
+latitude: 36.0875
+longitude: -95.87049
 postcode: "74145"
 city: Tulsa
 street: "East 54th Street"
