--- a/data/cities/stillwater/oncue.yml
+++ b/data/cities/stillwater/oncue.yml
@@ -1,11 +1,11 @@
-id: 209322784
+id: 260383307
 type: way
-latitude: 36.1265
-longitude: -97.06247
-postcode: "74075"
+latitude: 36.11556
+longitude: -97.08984
+postcode: "74074"
 city: Stillwater
-street: "North Duck Street"
-housenumber: 1120
+street: "West 6th Avenue"
+housenumber: 2421
 phone: ""
 opening_hours: ""
 website: ""
