--- a/data/cities/tulsa/walmart-neighborhood-market.yml
+++ b/data/cities/tulsa/walmart-neighborhood-market.yml
@@ -1,11 +1,11 @@
-id: 5315596620
-type: node
-latitude: 36.11745
-longitude: -95.93861
-postcode: "74135"
+id: 321408650
+type: way
+latitude: 36.1316
+longitude: -95.92416
+postcode: "74114"
 city: Tulsa
-street: "South Harvard Avenue"
-housenumber: 3139
-phone: "+1-918-984-6290"
-opening_hours: "Mo-Su 06:00-24:00"
-website: "https://www.walmart.com/store/6170/tulsa-ok/whats-new"
+street: "East 21st Street"
+housenumber: 4720
+phone: "+1-918-392-7020"
+opening_hours: "06:00-23:00; Dec 25 off"
+website: "https://www.walmart.com/store/3340-tulsa-ok"
