update content and data

--- a/data/cities/lawton/kohls.yml
+++ b/data/cities/lawton/kohls.yml
@@ -8,4 +8,4 @@ street: "Northwest 2nd Street"
 housenumber: 321
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.kohls.com/stores/ok/lawton-1435.shtml"
