--- a/data/cities/tulsa/elliott-electric-supply-store-134.yml
+++ b/data/cities/tulsa/elliott-electric-supply-store-134.yml
@@ -8,4 +8,4 @@ street: "East 21st Street"
 housenumber: 10131
 phone: "+1 918 948 7825"
 opening_hours: "Mo-Fr 07:00-21:30, Sa 08:00-12:00"
-website: "https://www.elliottelectric.com/"
+website: "https://www.elliottelectric.com/locations/134/OK/Tulsa.aspx"
