--- a/data/cities/tulsa/kohls.yml
+++ b/data/cities/tulsa/kohls.yml
@@ -8,4 +8,4 @@ street: "Riverside Parkway"
 housenumber: 9595
 phone: ""
 opening_hours: "Su 09:00-21:00; Mo-Th 09:00-23:00; Fr 09:00-23:00; Sa 08:00-23:00"
-website: ""
+website: "https://www.kohls.com/stores/ok/tulsa-426.shtml"
