--- a/data/cities/tulsa/shoe-carnival.yml
+++ b/data/cities/tulsa/shoe-carnival.yml
@@ -8,4 +8,4 @@ street: "Riverside Parkway"
 housenumber: 9591-C
 phone: ""
 opening_hours: "Su 11:00-19:00; Mo-Th 10:00-21:00; Fr,Sa 09:30-21:30"
-website: ""
+website: "https://stores.shoecarnival.com/ok/tulsa/shoe-store-tulsa-ok-226.html"
