--- a/data/cities/lawton/shoe-carnival.yml
+++ b/data/cities/lawton/shoe-carnival.yml
@@ -8,4 +8,4 @@ street: "Northwest 2nd Street"
 housenumber: 379
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.shoecarnival.com/ok/lawton/shoe-store-lawton-ok-532.html"
