--- a/data/cities/muskogee/metro-by-t-mobile.yml
+++ b/data/cities/muskogee/metro-by-t-mobile.yml
@@ -8,4 +8,4 @@ street: "East Side Boulevard"
 housenumber: 348
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.metrobyt-mobile.com/stores/bd/metro-by-t-mobile-muskogee-ok-10220164/"
