--- a/data/cities/muskogee/world-finance.yml
+++ b/data/cities/muskogee/world-finance.yml
@@ -8,4 +8,4 @@ street: "West Shawnee Street"
 housenumber: 300
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.loansbyworld.com/branches/branch-600"
