update content and data

--- a/data/cities/mcalester/cato.yml
+++ b/data/cities/mcalester/cato.yml
@@ -8,4 +8,4 @@ street: "South George Nigh Expressway"
 housenumber: 412
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.catofashions.com/ok/mcalester/412-south-george-nigh-expwy"
