--- a/data/cities/norman/michaels.yml
+++ b/data/cities/norman/michaels.yml
@@ -8,4 +8,4 @@ street: "24th Avenue Northwest"
 housenumber: 2040
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.michaels.com/ok/norman/5048"
