--- a/data/cities/ardmore/cato.yml
+++ b/data/cities/ardmore/cato.yml
@@ -8,4 +8,4 @@ street: "North Commerce Street"
 housenumber: 209
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.catofashions.com/ok/ardmore/209-north-commerce-street"
