--- a/data/cities/lawton/joann-fabrics-and-crafts.yml
+++ b/data/cities/lawton/joann-fabrics-and-crafts.yml
@@ -8,4 +8,4 @@ street: "Northwest 2nd Street"
 housenumber: 449
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.joann.com/ok/lawton/2393/"
