--- a/data/cities/muskogee/cato.yml
+++ b/data/cities/muskogee/cato.yml
@@ -8,4 +8,4 @@ street: "West Shawnee Street"
 housenumber: 924
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.catofashions.com/ok/muskogee/924-west-shawnee"
