--- a/data/cities/ponca-city/cato.yml
+++ b/data/cities/ponca-city/cato.yml
@@ -8,4 +8,4 @@ street: "North 14th Street"
 housenumber: 3012
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.catofashions.com/ok/ponca-city/3012-north-14th-street"
