update content and data

--- a/data/cities/broken-arrow/walmart-supercenter.yml
+++ b/data/cities/broken-arrow/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 1259448645
-type: node
+id: 234512037
+type: way
 latitude: 36.06699
-longitude: -95.74208
+longitude: -95.74313
 postcode: "74014"
 city: Broken Arrow
 street: "East Hillside Drive"
