--- a/data/cities/oklahoma-city/gamestop.yml
+++ b/data/cities/oklahoma-city/gamestop.yml
@@ -8,4 +8,4 @@ street: "South Santa Fe Avenue"
 housenumber: 7500
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.gamestop.com/store/us/ok/oklahoma-city/7755/south-santa-fe-gamestop"
