--- a/data/cities/roland/pilot.yml
+++ b/data/cities/roland/pilot.yml
@@ -1,11 +1,11 @@
-id: 1393369558
-type: node
-latitude: 35.40439
-longitude: -94.5217
+id: 265529436
+type: way
+latitude: 35.40418
+longitude: -94.52191
 postcode: "74954"
 city: Roland
 street: "West Ray Fine Boulevard"
 housenumber: 302
-phone: "918-427-0895"
+phone: "+1 918 427 0895"
 opening_hours: ""
 website: ""
