--- a/data/cities/stillwater/oncue.yml
+++ b/data/cities/stillwater/oncue.yml
@@ -1,11 +1,11 @@
-id: 260383307
+id: 237051366
 type: way
-latitude: 36.11556
-longitude: -97.08984
-postcode: "74074"
+latitude: 36.13025
+longitude: -97.05204
+postcode: "74075"
 city: Stillwater
-street: "West 6th Avenue"
-housenumber: 2421
+street: "North Perkins Road"
+housenumber: 724
 phone: ""
 opening_hours: ""
 website: ""
