--- a/data/cities/ardmore/gamestop.yml
+++ b/data/cities/ardmore/gamestop.yml
@@ -8,4 +8,4 @@ street: "12th Avenue Northwest"
 housenumber: 2401
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.gamestop.com/store/us/ok/ardmore/6719/ardmore-commons-gamestop"
