--- a/data/cities/ardmore/save-a-lot.yml
+++ b/data/cities/ardmore/save-a-lot.yml
@@ -8,4 +8,4 @@ street: "North Commerce Street"
 housenumber: 320
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://savealot.com/grocery-stores/ardmore-73401-21625/"
