--- a/data/cities/del-city/braums.yml
+++ b/data/cities/del-city/braums.yml
@@ -7,5 +7,5 @@ city: Del City
 street: "Southeast 43rd Street"
 housenumber: 4300
 phone: "+1-405-670-2646"
-opening_hours: ""
+opening_hours: "Mo-Su 06:00-22:45"
 website: "https://www.braums.com/"
