--- a/data/cities/ponca-city/gamestop.yml
+++ b/data/cities/ponca-city/gamestop.yml
@@ -8,4 +8,4 @@ street: "East Prospect Avenue"
 housenumber: 901
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.gamestop.com/store/us/ok/ponca-city/3604/prospect-ave-ponca-city-gamestop"
