--- a/data/cities/sallisaw/gamestop.yml
+++ b/data/cities/sallisaw/gamestop.yml
@@ -8,4 +8,4 @@ street: "West Ruth Avenue"
 housenumber: 1109
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.gamestop.com/store/us/ok/sallisaw/2910/sallisaw-west-plaza-gamestop"
