--- a/data/cities/stillwater/on-cue.yml
+++ b/data/cities/stillwater/on-cue.yml
@@ -1,11 +1,11 @@
-id: 260550454
+id: 264395979
 type: way
-latitude: 36.17431
-longitude: -97.07027
-postcode: "74075"
+latitude: 36.11542
+longitude: -97.03329
+postcode: "74074"
 city: Stillwater
-street: "North Washington Street"
-housenumber: 5000
+street: "East 6th Avenue"
+housenumber: 
 phone: ""
 opening_hours: ""
 website: ""
