--- a/data/cities/stillwater/on-cue-east-6th-avenue.yml
+++ b/data/cities/stillwater/on-cue-east-6th-avenue.yml
@@ -1,10 +1,10 @@
-id: 198275256
+id: 264395979
 type: way
-latitude: 36.11556
-longitude: -97.05099
+latitude: 36.11542
+longitude: -97.03329
 postcode: "74074"
 city: Stillwater
-street: ""
+street: "East 6th Avenue"
 housenumber: 
 phone: ""
 opening_hours: ""
