--- a/data/cities/tulsa/z-studio.yml
+++ b/data/cities/tulsa/z-studio.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "South Yale Avenue"
 housenumber: 8931
 phone: "+1 918-794-5322"
-opening_hours: "Mon 9-5 Tues-Fri 9-9 Sat 9-5"
+opening_hours: "Mo,Sa 09:00-17:00; Tu-Fr 09:00-21:00"
 website: "https://www.zstudiotulsa.com"
