update content and data

--- a/data/cities/broken-arrow/spoke-house-bicycles.yml
+++ b/data/cities/broken-arrow/spoke-house-bicycles.yml
@@ -1,11 +1,11 @@
 id: 9174509501
 type: node
-latitude: 36.05056
-longitude: -95.79102
+latitude: 36.05047
+longitude: -95.79127
 postcode: "74012"
 city: Broken Arrow
-street: "Main Street"
-housenumber: 224
+street: ""
+housenumber: 
 phone: ""
 opening_hours: ""
 website: ""
