--- a/data/cities/moore/costco.yml
+++ b/data/cities/moore/costco.yml
@@ -1,11 +1,11 @@
 id: 973205741
 type: way
-latitude: 35.31361
-longitude: -97.49733
+latitude: 35.31362
+longitude: -97.4972
 postcode: "73160"
 city: Moore
 street: "South Telephone Road"
 housenumber: 2651
-phone: "+14053007661"
-opening_hours: "Mo-Fr 10:00-20:30; Sa 09:30-19:00; Su 10:00-18:00"
+phone: "+1 405 300 7661"
+opening_hours: "Mo-Fr 10:00-20:30; Sa 09:30-18:00; Su 10:00-18:00"
 website: "https://www.costco.com/warehouse-locations/moore-OK-1444.html"
