--- a/data/cities/tulsa/the-home-depot-east-71st-street.yml
+++ b/data/cities/tulsa/the-home-depot-east-71st-street.yml
@@ -4,7 +4,7 @@ latitude: 36.05987
 longitude: -95.86731
 postcode: "74133"
 city: Tulsa
-street: "E 71st"
+street: "East 71st Street"
 housenumber: 9808
 phone: "+1-918-459-3700"
 opening_hours: ""
