--- a/data/cities/broken-arrow/southern-agriculture.yml
+++ b/data/cities/broken-arrow/southern-agriculture.yml
@@ -7,5 +7,5 @@ city: Broken Arrow
 street: "East Lansing Street"
 housenumber: 1034
 phone: "+1 (918) 251-0267"
-opening_hours: ""
+opening_hours: "Mo-Sa 09:00-19:00; Su 11:00-17:00"
 website: "https://southernagriculture.com/"
