--- a/data/cities/broken-arrow/walmart-neighborhood-market.yml
+++ b/data/cities/broken-arrow/walmart-neighborhood-market.yml
@@ -1,11 +1,11 @@
-id: 474206207
+id: 231172364
 type: way
-latitude: 36.07658
-longitude: -95.77614
+latitude: 36.0334
+longitude: -95.79943
 postcode: "74012"
 city: Broken Arrow
-street: "East Albany Street"
-housenumber: 1300
-phone: "+1-918-505-6247"
+street: "South Elm Place"
+housenumber: 1770
+phone: "+1-918-258-6175"
 opening_hours: "Mo-Su 06:00-24:00"
-website: "https://www.walmart.com/store/4655/broken-arrow-ok/whats-new"
+website: "https://www.walmart.com/store/3508/broken-arrow-ok/whats-new"
