--- a/data/cities/broken-arrow/walmart-supercenter.yml
+++ b/data/cities/broken-arrow/walmart-supercenter.yml
@@ -1,11 +1,11 @@
-id: 493995133
+id: 234512037
 type: way
-latitude: 35.99086
-longitude: -95.80153
-postcode: "74011"
+latitude: 36.06699
+longitude: -95.74313
+postcode: "74014"
 city: Broken Arrow
-street: "South Elm Place"
-housenumber: 6310
-phone: "+1-918-455-4354"
-opening_hours: "Mo-Su 06:00-24:00"
-website: "https://www.walmart.com/store/3295/broken-arrow-ok/whats-new"
+street: "East Hillside Drive"
+housenumber: 3900
+phone: "+1-918-355-1024"
+opening_hours: "24/7"
+website: "https://www.walmart.com/store/4637/broken-arrow-ok/whats-new"
