--- a/data/cities/coweta/blended-barber-company.yml
+++ b/data/cities/coweta/blended-barber-company.yml
@@ -7,5 +7,5 @@ city: Coweta
 street: "North Broadway Street"
 housenumber: 118
 phone: ""
-opening_hours: "We-Fr 10:00-18:00; Sa 10:00-15:00"
+opening_hours: "Tu-Fr 09:00+; Sa"
 website: ""
