--- a/data/cities/coweta/brown-family-funeral-home-and-cremation-service.yml
+++ b/data/cities/coweta/brown-family-funeral-home-and-cremation-service.yml
@@ -4,7 +4,7 @@ latitude: 35.94955
 longitude: -95.65078
 postcode: "74429"
 city: Coweta
-street: "South Broadway Street"
+street: "South Broadway"
 housenumber: 210
 phone: ""
 opening_hours: ""
