--- a/data/cities/coweta/country-mart.yml
+++ b/data/cities/coweta/country-mart.yml
@@ -7,5 +7,5 @@ city: Coweta
 street: "South State Highway 51"
 housenumber: 13937
 phone: ""
-opening_hours: ""
+opening_hours: "Su-Sa 07:00-21:00"
 website: ""
