--- a/data/cities/coweta/koweta-hardware-and-lumber.yml
+++ b/data/cities/coweta/koweta-hardware-and-lumber.yml
@@ -4,7 +4,7 @@ latitude: 35.95086
 longitude: -95.65038
 postcode: "74429"
 city: Coweta
-street: "South Broadway Street"
+street: "South Broadway"
 housenumber: 103
 phone: ""
 opening_hours: ""
