--- a/data/cities/oklahoma-city/autozone.yml
+++ b/data/cities/oklahoma-city/autozone.yml
@@ -1,11 +1,11 @@
-id: 499271707
+id: 229089804
 type: way
-latitude: 35.42136
-longitude: -97.44027
-postcode: "73115"
+latitude: 35.5368
+longitude: -97.56432
+postcode: "73116"
 city: Oklahoma City
-street: "Southeast 44th Street"
-housenumber: 4321
-phone: ""
-opening_hours: ""
-website: "https://www.autozone.com/locations/ok/oklahoma-city/4321-se-44th-st.html"
+street: "North May Avenue"
+housenumber: 6408
+phone: "+1 405 848 1071"
+opening_hours: "Mo-Sa 07:30-21:00; Su 09:00-20:00"
+website: "https://www.autozone.com/locations/ok/oklahoma-city/6408-n-may-ave.html"
