--- a/data/cities/vian/loves.yml
+++ b/data/cities/vian/loves.yml
@@ -1,11 +1,11 @@
 id: 9711571294
 type: node
-latitude: 35.49105
-longitude: -94.97151
+latitude: 35.49083
+longitude: -94.97119
 postcode: "74962"
 city: Vian
 street: "Thornton Street"
 housenumber: 706
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.loves.com/locations/120"
