update content and data

--- a/data/cities/muskogee/office-depot.yml
+++ b/data/cities/muskogee/office-depot.yml
@@ -8,4 +8,4 @@ street: "West Martin Luther King Street"
 housenumber: 201
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.officedepot.com/storelocator/ok/muskogee/office-depot-699"
