--- a/data/cities/broken-arrow/walmart-supercenter.yml
+++ b/data/cities/broken-arrow/walmart-supercenter.yml
@@ -1,11 +1,11 @@
-id: 234512037
+id: 483129268
 type: way
-latitude: 36.06699
-longitude: -95.74313
-postcode: "74014"
+latitude: 36.05742
+longitude: -95.81689
+postcode: "74012"
 city: Broken Arrow
-street: "East Hillside Drive"
-housenumber: 3900
-phone: "+1-918-355-1024"
+street: "West Kenosha Street"
+housenumber: 2301
+phone: "+1-918-259-9126"
 opening_hours: "24/7"
-website: "https://www.walmart.com/store/4637/broken-arrow-ok/whats-new"
+website: "https://www.walmart.com/store/472/broken-arrow-ok/whats-new"
