update content and data

--- a/data/cities/tulsa/keyport-self-storage.yml
+++ b/data/cities/tulsa/keyport-self-storage.yml
@@ -1,7 +1,7 @@
-id: 608114607
-type: way
-latitude: 36.15791
-longitude: -95.88658
+id: 11739422706
+type: node
+latitude: 36.15799
+longitude: -95.88642
 postcode: ""
 city: Tulsa
 street: "South Memorial Drive"
