--- a/data/cities/norman/goodwill-thrift-store-and-donation-center-west-main-street.yml
+++ b/data/cities/norman/goodwill-thrift-store-and-donation-center-west-main-street.yml
@@ -6,6 +6,6 @@ postcode: "73069"
 city: Norman
 street: "West Main Street"
 housenumber: 2430
-phone: ""
+phone: "(405) 701-1680"
 opening_hours: ""
 website: ""
