update content and data

--- a/data/cities/quinton/medicinal-marvels.yml
+++ b/data/cities/quinton/medicinal-marvels.yml
@@ -1,7 +1,7 @@
-id: 7428179116
-type: node
-latitude: 35.1229
-longitude: -95.369
+id: 794212170
+type: way
+latitude: 35.12292
+longitude: -95.36904
 postcode: "74561"
 city: Quinton
 street: "Main Street"
