update content and data

--- a/data/cities/edmond/oreilly-auto-parts.yml
+++ b/data/cities/edmond/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "East 2nd Street"
 housenumber: 4
 phone: "405-340-0083"
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/ok/edmond/autoparts-179.html"
