--- a/data/cities/erick/pucketts-food-stores.yml
+++ b/data/cities/erick/pucketts-food-stores.yml
@@ -1,7 +1,7 @@
-id: 9876979781
-type: node
-latitude: 35.21412
-longitude: -99.86702
+id: 1077200046
+type: way
+latitude: 35.21402
+longitude: -99.86721
 postcode: "73645"
 city: Erick
 street: "North Sheb Wooley Avenue"
