--- a/data/cities/noble/oreilly-auto-parts.yml
+++ b/data/cities/noble/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "North Main Street"
 housenumber: 627
 phone: ""
 opening_hours: "Mo-Sa 07:30-21:00; Su 09:00-20:00"
-website: ""
+website: "https://locations.oreillyauto.com/ok/noble/autoparts-2234.html"
