--- a/data/cities/oklahoma-city/oreilly-auto-parts-south-may-avenue.yml
+++ b/data/cities/oklahoma-city/oreilly-auto-parts-south-may-avenue.yml
@@ -8,4 +8,4 @@ street: "South May Avenue"
 housenumber: 6709
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/ok/oklahomacity/autoparts-1603.html"
