--- a/data/cities/oklahoma-city/palm-beach-tan.yml
+++ b/data/cities/oklahoma-city/palm-beach-tan.yml
@@ -8,4 +8,4 @@ street: "North May Avenue"
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://palmbeachtan.com/locations/OK/69th-May"
