--- a/data/cities/ardmore/oreilly-auto-parts.yml
+++ b/data/cities/ardmore/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "West Broadway Street"
 housenumber: 1315
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/ok/ardmore/autoparts-335.html"
