--- a/data/cities/hugo/oreilly-auto-parts.yml
+++ b/data/cities/hugo/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "East Jackson Street"
 housenumber: 1107
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/ok/hugo/autoparts-706.html"
