--- a/data/cities/muskogee/oreilly-auto-parts-north-main-street.yml
+++ b/data/cities/muskogee/oreilly-auto-parts-north-main-street.yml
@@ -8,4 +8,4 @@ street: "North Main Street"
 housenumber: 1907
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/ok/muskogee/autoparts-192.html"
