--- a/data/cities/muskogee/oreilly-auto-parts-north-york-street.yml
+++ b/data/cities/muskogee/oreilly-auto-parts-north-york-street.yml
@@ -8,4 +8,4 @@ street: "North York Street"
 housenumber: 301
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/ok/muskogee/autoparts-3903.html"
