--- a/data/cities/norman/oreilly-auto-parts.yml
+++ b/data/cities/norman/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "West Lindsey Street"
 housenumber: 2113
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/ok/norman/autoparts-209.html"
