--- a/data/cities/ponca-city/oreilly-auto-parts.yml
+++ b/data/cities/ponca-city/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "North 14th Street"
 housenumber: 3019
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/ok/poncacity/autoparts-258.html"
