--- a/data/cities/pryor-creek/oreilly-auto-parts.yml
+++ b/data/cities/pryor-creek/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "South Mill Street"
 housenumber: 301
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/ok/pryor/autoparts-160.html"
