--- a/data/cities/stillwater/oreilly-auto-parts.yml
+++ b/data/cities/stillwater/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "North Perkins Road"
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/ok/stillwater/autoparts-164.html"
