--- a/data/cities/tulsa/dollar-general.yml
+++ b/data/cities/tulsa/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 1191893409
+id: 1160949856
 type: way
-latitude: 36.11973
-longitude: -95.86754
-postcode: "74146"
+latitude: 36.14738
+longitude: -95.83496
+postcode: ""
 city: Tulsa
-street: "East 31st Street"
-housenumber: 9727
-phone: "+15392155360"
-opening_hours: "Mo-Su 08:00-22:00"
-website: "https://www.dollargeneral.com/store-directory/ok/tulsa/7519"
+street: "East 11th Street"
+housenumber: 12702
+phone: "+1 539 222 3530"
+opening_hours: ""
+website: "https://www.dollargeneral.com/store-directory/ok/tulsa/20982"
