update content and data

--- a/data/cities/ada/aldi.yml
+++ b/data/cities/ada/aldi.yml
@@ -1,7 +1,7 @@
-id: 8627328713
-type: node
-latitude: 34.79118
-longitude: -96.6587
+id: 930445300
+type: way
+latitude: 34.79122
+longitude: -96.65879
 postcode: "74820"
 city: Ada
 street: "Lonnie Abbott Boulevard"
