--- a/data/cities/muskogee/dollar-tree.yml
+++ b/data/cities/muskogee/dollar-tree.yml
@@ -1,11 +1,11 @@
-id: 1112552363
+id: 1112540776
 type: way
-latitude: 35.77128
-longitude: -95.36965
+latitude: 35.75442
+longitude: -95.36529
 postcode: "74401"
 city: Muskogee
-street: "West Shawnee Street"
-housenumber: 934
+street: "North Main Street"
+housenumber: 602
 phone: ""
 opening_hours: ""
-website: "https://www.dollartree.com/locations/ok/muskogee/3299/"
+website: "https://www.dollartree.com/locations/ok/muskogee/932/"
