--- a/data/cities/oklahoma-city/stability-cannabis.yml
+++ b/data/cities/oklahoma-city/stability-cannabis.yml
@@ -5,7 +5,7 @@ longitude: -97.5663
 postcode: "73116"
 city: Oklahoma City
 street: ""
-housenumber: 
+housenumber: 2901
 phone: ""
 opening_hours: ""
 website: ""
