--- a/data/cities/broken-arrow/hideaway-salon.yml
+++ b/data/cities/broken-arrow/hideaway-salon.yml
@@ -5,7 +5,7 @@ longitude: -95.79222
 postcode: "74012"
 city: Broken Arrow
 street: "West Broadway Avenue"
-housenumber: 
+housenumber: 201
 phone: "+1 918 251 4082"
 opening_hours: ""
 website: ""
