--- a/data/cities/oklahoma-city/happy-little-trees.yml
+++ b/data/cities/oklahoma-city/happy-little-trees.yml
@@ -5,7 +5,7 @@ longitude: -97.56626
 postcode: ""
 city: Oklahoma City
 street: "North May Avenue"
-housenumber: 
+housenumber: 6605
 phone: ""
 opening_hours: ""
 website: ""
