update content and data

--- a/data/cities/muskogee/atandt.yml
+++ b/data/cities/muskogee/atandt.yml
@@ -1,11 +1,11 @@
-id: 1171583754
+id: 1155144236
 type: way
-latitude: 35.74278
-longitude: -95.3399
-postcode: "74403"
+latitude: 35.76936
+longitude: -95.37384
+postcode: "74401"
 city: Muskogee
-street: "North York Street"
-housenumber: 402
+street: "West Shawnee Bypass"
+housenumber: 819
 phone: ""
 opening_hours: ""
 website: ""
