--- a/data/cities/norman/petsmart.yml
+++ b/data/cities/norman/petsmart.yml
@@ -6,6 +6,6 @@ postcode: "73072"
 city: Norman
 street: "Ed Noble Parkway"
 housenumber: 660
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 405-329-9747"
+opening_hours: "Mo-Sa 09:00-21:00; Su 10:00-19:00; PH off"
+website: "https://www.petsmart.com/stores/us/ok/norman-store0214.html"
