--- a/data/cities/stillwater/goodwill-thrift-store-and-donation-center.yml
+++ b/data/cities/stillwater/goodwill-thrift-store-and-donation-center.yml
@@ -1,7 +1,7 @@
-id: 4744334621
-type: node
-latitude: 36.14456
-longitude: -97.04925
+id: 1275336435
+type: way
+latitude: 36.14477
+longitude: -97.04947
 postcode: "74075"
 city: Stillwater
 street: "East Lakeview Road"
