--- a/data/cities/stillwater/oncue-north-perkins-road.yml
+++ b/data/cities/stillwater/oncue-north-perkins-road.yml
@@ -1,11 +1,11 @@
-id: 236346604
+id: 237051366
 type: way
-latitude: 36.12941
-longitude: -97.05232
+latitude: 36.13025
+longitude: -97.05204
 postcode: "74075"
 city: Stillwater
 street: "North Perkins Road"
-housenumber: 
+housenumber: 724
 phone: ""
 opening_hours: ""
 website: ""
