--- a/data/cities/muskogee/valvoline.yml
+++ b/data/cities/muskogee/valvoline.yml
@@ -8,4 +8,4 @@ street: "Chandler Road"
 housenumber: 3211
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://store.vioc.com/ok/muskogee/oil-change-ij0003.html"
