--- a/data/cities/oklahoma-city/valvoline.yml
+++ b/data/cities/oklahoma-city/valvoline.yml
@@ -8,4 +8,4 @@ street: "Northwest 63rd Street"
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://store.vioc.com/ok/oklahomacity/oil-change-aq5106.html"
