update content and data

--- a/data/cities/lawton/lawton-chrysler-jeep-dodge-ram.yml
+++ b/data/cities/lawton/lawton-chrysler-jeep-dodge-ram.yml
@@ -6,6 +6,6 @@ postcode: "73501"
 city: Lawton
 street: "Southeast Interstate Drive"
 housenumber: 215
-phone: ""
+phone: "5802150083"
 opening_hours: ""
 website: ""
