--- a/data/cities/arcadia/pops-soda-ranch.yml
+++ b/data/cities/arcadia/pops-soda-ranch.yml
@@ -7,5 +7,5 @@ city: Arcadia
 street: "Highway 66"
 housenumber: 660
 phone: ""
-opening_hours: "Mo-Su 06:00-22:00"
+opening_hours: "10:30-22:00"
 website: "https://pops66.com/"
