update content and data

--- a/data/cities/oklahoma-city/metro-ford-of-okc.yml
+++ b/data/cities/oklahoma-city/metro-ford-of-okc.yml
@@ -4,8 +4,8 @@ latitude: 35.51075
 longitude: -97.56498
 postcode: "73112"
 city: Oklahoma City
-street: ""
-housenumber: 
-phone: ""
-opening_hours: ""
+street: "West I-44 Service"
+housenumber: 2800
+phone: "4058968531"
+opening_hours: "Mo-Sa 08:00-23:00"
 website: ""
