--- a/data/cities/oklahoma-city/lowes-west-memorial-road.yml
+++ b/data/cities/oklahoma-city/lowes-west-memorial-road.yml
@@ -1,11 +1,11 @@
-id: 238019833
+id: 238022252
 type: way
-latitude: 35.60957
-longitude: -97.5331
-postcode: ""
+latitude: 35.60722
+longitude: -97.55569
+postcode: "73134"
 city: Oklahoma City
 street: "West Memorial Road"
-housenumber: 1129
+housenumber: 2400
 phone: ""
 opening_hours: ""
 website: ""
