update content and data

--- a/data/cities/muskogee/atandt.yml
+++ b/data/cities/muskogee/atandt.yml
@@ -1,11 +1,11 @@
-id: 1155144236
+id: 1171583754
 type: way
-latitude: 35.76936
-longitude: -95.37384
-postcode: "74401"
+latitude: 35.74278
+longitude: -95.3399
+postcode: "74403"
 city: Muskogee
-street: "West Shawnee Bypass"
-housenumber: 819
+street: "North York Street"
+housenumber: 402
 phone: ""
 opening_hours: ""
 website: ""
