--- a/data/cities/tulsa/toyota.yml
+++ b/data/cities/tulsa/toyota.yml
@@ -1,11 +1,11 @@
-id: 1288976924
+id: 834033440
 type: way
-latitude: 36.02247
-longitude: -95.885
+latitude: 36.0208
+longitude: -95.88564
 postcode: "74133"
 city: Tulsa
 street: "South Memorial Drive"
-housenumber: 9777
-phone: "9186793001"
+housenumber: 9809
+phone: ""
 opening_hours: ""
 website: ""
