--- a/data/cities/tulsa/cvs-pharmacy.yml
+++ b/data/cities/tulsa/cvs-pharmacy.yml
@@ -1,11 +1,11 @@
-id: 537840505
+id: 744425831
 type: way
-latitude: 36.10369
-longitude: -95.9396
-postcode: ""
+latitude: 36.1411
+longitude: -95.96663
+postcode: "74014"
 city: Tulsa
-street: "South Harvard Avenue"
-housenumber: 4107
+street: "East 15th Street"
+housenumber: 1701
 phone: ""
-opening_hours: "Mo-Su 08:00-22:00"
-website: "https://www.cvs.com/store-locator/tulsa-ok-pharmacies/4107-s-harvard-ave-tulsa-ok-74135/storeid=7972"
+opening_hours: "24/7"
+website: "https://www.cvs.com/store-locator/tulsa-ok-pharmacies/1701-e-15th-st-tulsa-ok-74104/storeid=10976"
