update content and data

--- a/data/cities/lawton/kohls.yml
+++ b/data/cities/lawton/kohls.yml
@@ -6,6 +6,6 @@ postcode: "73501"
 city: Lawton
 street: "Northwest 2nd Street"
 housenumber: 321
-phone: ""
-opening_hours: ""
+phone: "+1 580-581-7224"
+opening_hours: "Mo-Sa 09:00-21:00; Su 09:00-20:00"
 website: "https://www.kohls.com/stores/ok/lawton-1435.shtml"
