--- a/data/cities/muskogee/petco.yml
+++ b/data/cities/muskogee/petco.yml
@@ -6,6 +6,6 @@ postcode: "74401"
 city: Muskogee
 street: "West Shawnee Street"
 housenumber: 936
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 918-686-6374"
+opening_hours: "Mo-Sa 09:00-20:00; Su 10:00-19:00"
+website: "https://stores.petco.com/ok/muskogee/pet-supplies-muskogee-ok-1473.html"
