--- a/data/cities/oklahoma-city/petco.yml
+++ b/data/cities/oklahoma-city/petco.yml
@@ -1,11 +1,11 @@
-id: 1209940236
-type: way
-latitude: 35.53531
-longitude: -97.56691
-postcode: "73116"
+id: 11380431051
+type: node
+latitude: 35.55902
+longitude: -97.63765
+postcode: "73132"
 city: Oklahoma City
-street: "Northwest 63rd Street"
-housenumber: 2932
-phone: "+1 405 843 0763"
-opening_hours: "Mo-Sa 09:00-21:00; Su 10:00-19:00"
-website: ""
+street: "Northwest Expressway"
+housenumber: 7001
+phone: "+1 405-720-2298"
+opening_hours: "Mo-Sa 09:00-20:00; Su 10:00-19:00"
+website: "https://stores.petco.com/ok/oklahomacity/pet-supplies-oklahomacity-ok-1443.html"
