--- a/data/cities/tulsa/kohls.yml
+++ b/data/cities/tulsa/kohls.yml
@@ -1,11 +1,11 @@
-id: 495187822
+id: 94055335
 type: way
-latitude: 36.02515
-longitude: -95.94704
-postcode: ""
+latitude: 36.06305
+longitude: -95.85277
+postcode: "74133"
 city: Tulsa
-street: "Riverside Parkway"
-housenumber: 9595
-phone: ""
-opening_hours: "Su 09:00-21:00; Mo-Th 09:00-23:00; Fr 09:00-23:00; Sa 08:00-23:00"
-website: "https://www.kohls.com/stores/ok/tulsa-426.shtml"
+street: "East 71st Street"
+housenumber: 11011
+phone: "+1 918-461-1950"
+opening_hours: "Fr,Sa 09:00-22:00; Su-Th 09:00-21:00"
+website: "https://www.kohls.com/stores/ok/tulsa-425.shtml"
