--- a/data/cities/eufaula/eufaula-true-value-hardware.yml
+++ b/data/cities/eufaula/eufaula-true-value-hardware.yml
@@ -6,6 +6,6 @@ postcode: "74432"
 city: Eufaula
 street: "South Main Street"
 housenumber: 625
-phone: ""
+phone: "+1 918-689-2574"
 opening_hours: ""
-website: ""
+website: "http://www.truevalue.com/eufaulatruevaluehardware"
