--- a/data/cities/lawton/petco.yml
+++ b/data/cities/lawton/petco.yml
@@ -6,6 +6,6 @@ postcode: "73501"
 city: Lawton
 street: "Northwest 2nd Street"
 housenumber: 223
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 580-355-1362"
+opening_hours: "Mo-Sa 09:00-20:00; Su 10:00-19:00"
+website: "https://stores.petco.com/ok/lawton/pet-supplies-lawton-ok-2433.html"
