--- a/data/cities/tulsa/denver-avenue-station.yml
+++ b/data/cities/tulsa/denver-avenue-station.yml
@@ -8,4 +8,4 @@ street: "South Denver Avenue"
 housenumber: 319
 phone: ""
 opening_hours: "Mo-Fr 08:00-12:00, 13:00-17:00"
-website: "http://metrolinkok.org/"
+website: "https://www.metrolinkok.org/"
