--- a/data/cities/tulsa/petco.yml
+++ b/data/cities/tulsa/petco.yml
@@ -2,10 +2,10 @@ id: 397356478
 type: way
 latitude: 36.02431
 longitude: -95.94839
-postcode: ""
+postcode: "74137"
 city: Tulsa
 street: "Riverside Parkway"
 housenumber: 9645
-phone: ""
+phone: "+1 918-296-3312"
 opening_hours: "Mo-Sa 09:00-21:00; Su 10:00-19:00"
-website: ""
+website: "https://stores.petco.com/ok/tulsa/pet-supplies-tulsa-ok-1430.html"
